--- a/ok/bc/bc07-0.12.0.0.0.md
+++ b/ok/bc/bc07-0.12.0.0.0.md
@@ -16,11 +16,11 @@
 | 药名    | 性味                 | 归经              | 功           效                                         | 主            治                                             | 用量                                   | 备注                              |
 | ------- | -------------------- | ----------------- | ------------------------------------------------------- | ------------------------------------------------------------ | -------------------------------------- | --------------------------------- |
 | 附子    | 辛、甘、   热有毒    | 心、肾、脾.       | 回阳救逆，补火助阳，                           散寒止痛 | ① 亡阳厥逆证  ② 脾肾阳虚证③ 寒湿痹痛                         | 3—15克                                 | 入汤剂先煎30—60分钟  孕妇慎用     |
-| 草乌 头 | 辛、苦、 温有大毒    | 心、肝、脾        | 祛风湿，   散寒止痛                                     | ①寒湿痹痛  ②心腹冷痛  ③跌打损伤疼痛                          | 1.5—4.5克，若入散剂或酒剂，则减为1—2克 | 人汤剂先煎3—60分钟孕妇慎用        |
+| 草乌 头 | 辛、苦、 温有大毒    | 心、肝、脾        | 祛风湿，   散寒止痛                                     | ①寒湿痹痛  ②心腹冷痛  ③跌打损伤疼痛                          | 1.5—4.5克，若入散剂或酒剂，则减为1—2克 | 入汤剂先煎3—60分钟孕妇慎用        |
 | 肉桂    | 辛、甘、   热        | 肾、脾、心、 肝   | 补火助阳， 散寒止痛，   温通经脉                        | ①肾阳不足、命门火衰的畏寒肢冷、阳痿等证  ②寒淤痛经、经闭  ③脘腹冷痛  ④寒湿痹证  ⑤阴疽漫肿或痈疽久溃不敛 | 2—6克研末冲服每次1—2克                 | 不宜久煎                          |
 | 干姜    | 辛、热               | 脾、胃、心、   肺 | 温中回阳，温肺化饮                                      | ①脘腹冷痛、呕吐泄泻  ②亡阳厥逆证  ③寒饮喘咳                  | 3—10   克                              |                                   |
-| 炮妾    | 苦、涩、   温        | 脾、肝            | 温经止血，温中                                          | ①虚寒性出血   ②脘腹寒痛、泻痢                                | 3—6克                                  |                                   |
-| 吴茱萸  | 辛、苦、   热有小 毒 | 肝、脾、胃        | 散寒止痛,   疏肝下气, .燥湿                             | ①阴寒胃痛、腹痛头痛   ②寒湿脚气  ③呕吐吞酸                   | 1.5—5克外用适量                        |                                   |
+| 炮姜    | 苦、涩、   温        | 脾、肝            | 温经止血，温中                                          | ①虚寒性出血   ②脘腹寒痛、泻痢                                | 3—6克                                  |                                   |
+| 吴茱萸  | 辛、苦、   热有小 毒 | 肝、脾、胃        | 散寒止痛,   疏肝下气, 燥湿                             | ①阴寒胃痛、腹痛头痛   ②寒湿脚气  ③呕吐吞酸                   | 1.5—5克外用适量                        |                                   |
 | 高良姜  | 辛、热               | 脾、胃            | 温中止痛                                                | 脘腹冷痛、吐泻                                               | 3—10克                                 |                                   |
 | 川椒    | 辛、热               | 脾、胃、肾        | 温中止痛， 驱蛔                                         | ①脘腹冷痛、吐泻   ②虫积腹痛                                  | 2—8克                                  | 椒目功能行水平喘， 用于水肿胀满。 |
 | 丁香    | 辛、温               | 脾、胃、肾        | 温中降逆， 温肾助阳                                     | ①胃寒呃逆   ②肾虚阳痿等证                                    | 2—6克                                  | 畏郁金                            |
