--- a/ok/yk/yk0zl01-1.3.0.0.0.md
+++ b/ok/yk/yk0zl01-1.3.0.0.0.md
@@ -4,7 +4,7 @@
 
 1.有关眼科的医药著作：
 
-（1）《太平圣惠方》，署名王怀隐等人，是北宋初由官方组织人力编著而成。全书共100卷，其中卷三十二与卷三十三为眼科专篇。收载眼科病症约60种，治眼方剂500余首，基本上总结了唐以前的眼科成就。书中所述病因21种，是在《干金要方》19因的基础上，去掉5因，新增7因而成。该书还对五轮的配位作了改动，并且将它与眼病的病机联系起来，这就推进了五轮学说的临床应用。本书还根据当时社会上迷信道教，炼丹服石成风，新增了丹石毒气攻眼的证治。在眼科手术方面，介绍了钩、割、针、劆诸法，特别是对金针拨内障及胬肉割烙术等也有详细的介绍。因而此书对眼科也是很有价值的文献。
+（1）《太平圣惠方》，署名王怀隐等人，是北宋初由官方组织人力编著而成。全书共100卷，其中卷三十二与卷三十三为眼科专篇。收载眼科病症约60种，治眼方剂500余首，基本上总结了唐以前的眼科成就。书中所述病因21种，是在《千金要方》19因的基础上，去掉5因，新增7因而成。该书还对五轮的配位作了改动，并且将它与眼病的病机联系起来，这就推进了五轮学说的临床应用。本书还根据当时社会上迷信道教，炼丹服石成风，新增了丹石毒气攻眼的证治。在眼科手术方面，介绍了钩、割、针、劆诸法，特别是对金针拨内障及胬肉割烙术等也有详细的介绍。因而此书对眼科也是很有价值的文献。
 
 （2）《圣济总录》，是北宋末期由朝廷组织人员编写而成。全书共200卷，眼目门在《太平圣惠方》的基础上扩充内容成12卷，收录治眼方剂760余首，多为大方。书中眼科理论叙述比较粗略，且未釆用五轮学说。病种有所增加，如肝虚眼、目睑垂缓等。在眼科手术方面，介绍有钩、割、劆等法，同时还列述了适应症，只是对金针拨内障法略去未提。此外，还收载了熨、烙、淋洗、掌熨及包扎等。本书眼目门内容比较丰富。
 
