--- a/ok/yk/yk0zl01-1.4.0.0.0.md
+++ b/ok/yk/yk0zl01-1.4.0.0.0.md
@@ -36,9 +36,7 @@
 
 （3）《古今图书集成•医部全录》是雍正年间清政府组织编纂的规模巨大的类书，由陈梦雷等所编。全书共520卷、其中目门13卷，搜集历代主要眼科著述，依成书年代顺序，择要辑录眼科文献，前为医论，后为方药、针灸、导引、医案等，内容丰富，很具参考价值。
 
-（4）黄庭镜于乾隆年间著《目经大成》，成书于1741年，全书共3卷。卷1立论，卷2考症，卷3类方。书中首论五轮八廓等眼科理论，及开导、钩割、针烙、金针拨内障诸治疗技术，凡有关眼科之医学基本理论，诸如阴阳、五行、脏腑、经络、六淫、七情、脉象等，均概括论及。其论症，以因分，则有风、寒、暑、湿、厥郁、毒、疟、胎产、痘疹、疳积、因他、无因而因12类；以症分，则有天行气运至目晕凡89，逐一条分缕析。每症之下，或诗、或词、或歌、或赋，首吟之，次则详列证候，阐释病机，终则指明治法，时而犹附案例以证己说。病因脉治，纲目井然。全书之最后部分，为眼科方剂之大成。黄氏仿景岳补、和、攻、散、寒、热、固、因八阵之制，每阵各列眼科常用方数十首，凡229方，于组成、主治之外，犹阐明方义，更有细论其
-
-随症化裁、灵活变通之妙者，诚为其他眼科著作之少见。书中所收外治19方，括外治之点、洗、擦，涂、熏诸法，俱实用而效著者，充分体现内服与外治并重之原则。该书对五轮八廓的发挥、继承整理针拨术及独创病名等均有突出的见解。数十年后，该书经邓赞夫增补，又名之为《目科正宗》，于1810年版行于世。
+（4）黄庭镜于乾隆年间著《目经大成》，成书于1741年，全书共3卷。卷1立论，卷2考症，卷3类方。书中首论五轮八廓等眼科理论，及开导、钩割、针烙、金针拨内障诸治疗技术，凡有关眼科之医学基本理论，诸如阴阳、五行、脏腑、经络、六淫、七情、脉象等，均概括论及。其论症，以因分，则有风、寒、暑、湿、厥郁、毒、疟、胎产、痘疹、疳积、因他、无因而因12类；以症分，则有天行气运至目晕凡89，逐一条分缕析。每症之下，或诗、或词、或歌、或赋，首吟之，次则详列证候，阐释病机，终则指明治法，时而犹附案例以证己说。病因脉治，纲目井然。全书之最后部分，为眼科方剂之大成。黄氏仿景岳补、和、攻、散、寒、热、固、因八阵之制，每阵各列眼科常用方数十首，凡229方，于组成、主治之外，犹阐明方义，更有细论其随症化裁、灵活变通之妙者，诚为其他眼科著作之少见。书中所收外治19方，括外治之点、洗、擦，涂、熏诸法，俱实用而效著者，充分体现内服与外治并重之原则。该书对五轮八廓的发挥、继承整理针拨术及独创病名等均有突出的见解。数十年后，该书经邓赞夫增补，又名之为《目科正宗》，于1810年版行于世。
 
 （5）《银海指南》4卷，是清•顾锡在认真学习《内经》及前人医学论著的基础上，结合自已的实践经验所著。卷1〜2比较全面地论述眼科五轮、八廓、运气学说，眼病的病因、病机、脏腑主病及全身兼病等；卷3列内服方170余首，外用方11首；卷4录验案176则。该书把八廓的功能与经络联系起来，且与《审视瑶函》一样，认为八廓在内无迹可寻，有病时才能从眼部血络的走向与位置分辨出来。书中用病因、脏腑等分析归纳眼部病症的方法，明确而实用。该书在治疗方面，内治所列方剂多属内科常用方，外治除主张用药外，不赞成手术疗法。
 
