--- a/ok/fjx/fjx04-0.1.0.0.0.md
+++ b/ok/fjx/fjx04-0.1.0.0.0.md
@@ -32,8 +32,8 @@
 
 ------
 
-**电子版注：**
+电子版注：
 
-**1、原文有“大烦湿”，应为“大烦渴”，电子版已改。**
+1、原文有“大烦湿”，应为“大烦渴”，电子版已改。
 
-**2、原文有“阳阴气分实热”，应为“阳明气分实热”，电子版已改。**
+2、原文有“阳阴气分实热”，应为“阳明气分实热”，电子版已改。
