update ok/yk/yk0zl02-0.1.0.0.0.md. 错别字改为束

--- a/ok/yk/yk0zl02-0.1.0.0.0.md
+++ b/ok/yk/yk0zl02-0.1.0.0.0.md
@@ -2,7 +2,7 @@
 
 《灵枢•大惑论》指出：“五脏六腑之精气皆上注于目而为精。”《审视瑶函》亦指出：“夫目者，五脏六腑之精华。”说明眼是由五脏六腑之精气上注而成的。眼位于眼眶骨形成的骨眶之内，主要由眼珠、胞睑、眼带、目系等部分组成。
 
-1.胞睑：即两目外上下卫护之胞，又名目睥、目裹、眼胞、眼睑等，《黄帝内经》称其为约朿，俗名眼皮。胞脸分上下两部分，在上者称上睑，在下者称下脸，亦有“胞者上胞也，睑者下睑也”之说（《银海精微》），故习称上胞下睑。
+1.胞睑：即两目外上下卫护之胞，又名目睥、目裹、眼胞、眼睑等，《黄帝内经》称其为约束，俗名眼皮。胞脸分上下两部分，在上者称上睑，在下者称下脸，亦有“胞者上胞也，睑者下睑也”之说（《银海精微》），故习称上胞下睑。
 
 血睑的边缘称睑弦，又名目唇、睑唇或胞沿。睑弦上生有排列整齐的睫毛。胞睑可以反转，其内面称睑内或睥内，表面红黄相兼，光滑润泽，与眼珠表面紧贴而不相粘连。
 
