--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -56,9 +56,9 @@
 >
 > 《中医药学概论-藏象-气》
 
-> **阳气者若天与日，失其所则折寿而不彰(1)，故天运当以日光明。是故阳因而上，卫外者也(2)。**
+> **阳气者若天与日，失其所则折寿而不彰，故天运当以日光明。是故阳因而上，卫外者也。**
 >
-> 《素问·生气通天论》
+> ——《素问•生气通天论》
 >
 > *由于生命活动的存在，不能一时一刻离开阳气，故后世医家把肾中阳气视为“立命之本”，称之为真阳，真火。可见阳气代表着人体具有阳性特征的精微物质，及其产生的热能和动力。它的物质基础是精，它的属性是火，来源于先天，但要靠后天的补充和营养。《内经》作者在此以天空和太阳的关系作比喻，形象地说明人体阳气的重要性。因为自然界的运动，万物的生长，都离不开太阳，它的光和热，为地球上一切生命活动提供了生存的条件。*
 >
@@ -72,43 +72,44 @@
 
 人体中全身各处都有天气、地气存在，但因两者特性的不同，可以分出多种天地关系。天气倾向于向外、向上，地气倾向于向内、向下，从此角度对人体进行划分的话，人体的肌表、四肢等形体属天，五脏六腑属地；上窍属天，下窍属地；上半身属天，下半身属地；三焦中的上焦属天，中下焦属地；脏腑对比的话，腑属天，脏属地。
 
-> **阳者，天气也，主外；阴者，地气也，主内（1）。故阳道实，阴道虚（2）。**
+> **阳者，天气也，主外；阴者，地气也，主内。故阳道实，阴道虚。**
 >
-> 《素问·太阴阳明论》
+> ——《素问•太阴阳明论》
 
 这里的属天指的是相对而言，气态物质的比例高一些或者作用强一些。属地则相反。这种方式定义的几种天地，相互之间都有类似自然界气交之地的交互形式，包括物质交互和能量交互等。比如脏腑之间，腑包括胃、大小肠、胆、膀胱等，都是空腔器官，属天，里面有较多气态物质；脏包括肝、心、脾、肺、肾，为实体器官，属地，相对而言气态物质比较少，固液态物质比较多。脏腑之间互为表里，有频繁的物质或能量的交互。
 
 **一般我们谈气这个名词，如果不特殊说明，指的是气态物质，也就是天气**。在中医中，气态物质的作用非常大，其范畴远远超出现代医学研究的范畴。气虚就是气态物质不足，会影响人的很多功能。
 
-> 黄帝曰：余闻天为阳，地为阴，日为阳，月为阴，其合之于人，奈何？岐伯曰：***腰以上为天*，腰以下为地**，
+> 黄帝曰：余闻天为阳，地为阴，日为阳，月为阴，其合之于人，奈何？
+> 岐伯曰：***腰以上为天*，腰以下为地**，
 >
-> 《黄帝内经-灵枢-阴阳系日月第四十一》
+> ——《黄帝内经•灵枢•阴阳系日月第四十一》
 
-> 夫言人之阴阳，则**外为阳，内为阴**。言人身之阴阳，则背为阳，腹为阴。言人身之藏府中阴阳，则藏者为阴，府者为阳。肝心脾肺肾五藏皆为阴，胆、胃、大肠、小肠、膀胱、三焦六府皆为阳（1）。所以欲知阴中之阴，阳中之阳者何也？为冬病在阴，夏病在阳，春病在阴，秋病在阳，皆视其所在，为施针石也（2）。故背为阳，阳中之阳，心也；背为阳，阳中之阴，肺也；腹为阴，阴中之阴，肾也；腹为阴，阴中之阳，肝也；腹为阴，阴中之至阴，脾也（3）。**此皆阴阳表里内外雌雄相输应**也，故以**应天之阴阳也**（4）。
+> 夫言人之阴阳，则**外为阳，内为阴**。言人身之阴阳，则背为阳，腹为阴。言人身之藏府中阴阳，则藏者为阴，府者为阳。肝心脾肺肾五藏皆为阴，胆、胃、大肠、小肠、膀胱、三焦六府皆为阳。所以欲知阴中之阴，阳中之阳者何也？为冬病在阴，夏病在阳，春病在阴，秋病在阳，皆视其所在，为施针石也。故背为阳，阳中之阳，心也；背为阳，阳中之阴，肺也；腹为阴，阴中之阴，肾也；腹为阴，阴中之阳，肝也；腹为阴，阴中之至阴，脾也。**此皆阴阳表里内外雌雄相输应**也，故以**应天之阴阳也**。
 >
-> 《素问·金匮真言论》
+> ——《黄帝内经•素问•金匮真言论》
 
-> **清阳出上窍，浊阴出下窍(1)；清阳发腠理，浊阴走五藏(2)；清阳实四肢，浊阴归六府(3)。**
+> **清阳出上窍，浊阴出下窍；清阳发腠理，浊阴走五藏；清阳实四肢，浊阴归六府。**
 >
-> 《素问·阴阳应象大论》
+> ——《黄帝内经•素问•阴阳应象大论》
 
 > 岐伯对曰：脑、髓、骨、脉、胆、女子胞，此六者，**地气之所生也。皆脏于阴而象于地，故藏而不泻**，名曰奇恒之府。
 >
 > 夫胃、大肠、小肠、三焦、膀胱，此五者天气之所生也，**其气象天**，故泻而不藏。此**受五藏浊气**，名曰传化之府，此不能久留，输泻者也。
 >
-> 《素问•五藏别论篇第十一》
+> ——《黄帝内经•素问•五藏别论篇第十一》
 
-> **上焦如雾**（1），中焦如沤（2），下焦如渎（3）。
+> **上焦如雾**，中焦如沤，下焦如渎。
 >
-> 《灵枢•营卫生会》
+> ——《黄帝内经•灵枢•营卫生会》
 
-> 何谓气？岐伯曰：**上焦开发，宣五谷味**，熏肤，充身，泽毛，若**雾露之溉**，是谓气(3)
+> 何谓气？岐伯曰：**上焦开发，宣五谷味**，熏肤，充身，泽毛，若**雾露之溉**，是谓气。
 >
-> 《灵枢.决气》
+> ——《黄帝内经•灵枢•决气》
 
-> 饮入于胃，**游溢精气，上输于脾**（1），**脾气散精，上归于肺**，通调水道，下输膀胱。水精四布，五经并行（2）。合于四时五藏阴阳，揆度以为常也(3)。
+> 饮入于胃，**游溢精气，上输于脾**，**脾气散精，上归于肺**，通调水道，下输膀胱。水精四布，五经并行。合于四时五藏阴阳，揆度以为常也。
 >
-> 《素问•经脉别论》
+> ——《黄帝内经•素问•经脉别论》
 
 > 阳的**化气过程**，即是把体内有形之质，化为无形之气，或转化为能量，如“**精化为气**”，“**水化为气**”等等，都依赖于阳的气化作用；阴的**成形过程**，即是把外界的物质，合成自身的形质，如精血的生成，形体的发育等等，都要依靠阴的成形作用。
 >
@@ -120,7 +121,7 @@
 
 在我们教材的定义中，广义的精，泛指一切精微物质，包括气、血、津液及水谷精微，存在于全身各处。
 
-狭义的精一种比血更精华的物质，可以理解为血的提炼浓缩品，以肾藏的精为主、脏腑、全身皆有。这里主要指狭义的精。
+狭义的精指一种比血更精华的物质，可以理解为血的提炼浓缩品，以肾藏的精为主、脏腑、全身皆有。这里主要指狭义的精。
 
 精可以与能量(元气)进行相互转化。在需要能量的时候精转化为能量（精化气），也可以在能量充足的时候，把能量存储起来（气化精）。所以精类似现代能源的概念。
 
@@ -130,17 +131,21 @@
 
 另外精血同源，二者是可以互相转化，精可以稀释为血，血可以浓缩为精。所以在血不足的时候，精可以转化为血作为补充。
 
-> 肾藏五脏六腑之精及生殖之精，主骨生髓精髓互生，精血同源，故**精能生血，血可化精**，二者相互资生
+> 肾藏五脏六腑之精及生殖之精，主骨生髓精髓互生，精血同源，故**精能生血，血可化精**，二者相互资生。
 >
 > 《中医妇科学》
 
-> 肝藏血，肾藏精，精血之间相互滋生、相互转化，故有“肝肾同源，乙癸同治”之说
+> 肝藏血，肾藏精，精血之间相互滋生、相互转化，故有“肝肾同源，乙癸同治”之说。
 >
 > 《中医药学概论-肝与肾的关系》
 
 由此可见，精是非常重要的，其既可以补阴又可以补阳。因为精大量藏于肾，所以精充足与否主要看肾精是否充足。若肾精充足，则可以补人一身的元气和阴血，使各个脏腑的阴阳都不虚，人就不容易衰老。因此《内经》以肾精的充足与否作为年轻与衰老的标志。
 
-> 肾中所藏之精，为人生命之源，对人体的生长发育与生殖，起着极为重要的作用。《素问·上古天真论》说：“女子七岁，**肾气盛**，齿更髮长；二七而天癸至，任脉通，太冲脉盛，月事以时下，故有子；三七，**肾气平均**，故真牙生而长极；四七，筋骨坚，髮长极，身体盛壮；五七，阳明脉衰，面始焦，髮始堕；六七，三阳脉衰于上，面皆焦，髮始白；七七，任脉虚，太冲脉衰少，天癸竭，地道不通，故形坏而无子也。丈夫八岁，**肾气实**，髮长齿更，二八，**肾气盛**，天癸至，精气溢泻，阴阳和，故能有子；三八，**肾气平均**，筋骨劲强，故真牙生而长极；四八，筋骨隆盛，肌肉满壮；五八，**肾气衰**，髮堕齿槁；六八，阳气衰竭于上，面焦，髮鬓颁白；七八，肝气衰，筋不能动，天癸竭，**精少**，肾脏衰，形体皆极；八八、则齿髮去”。此段论述，指出了人体的生、长、壮、老、已的自然规律，与**肾中精气的盛衰**密切相关。
+> 肾中所藏之精，为人生命之源，对人体的生长发育与生殖，起着极为重要的作用。
+>
+> > 《素问•上古天真论》说：“女子七岁，**肾气盛**，齿更髮长；二七而天癸至，任脉通，太冲脉盛，月事以时下，故有子；三七，**肾气平均**，故真牙生而长极；四七，筋骨坚，髮长极，身体盛壮；五七，阳明脉衰，面始焦，髮始堕；六七，三阳脉衰于上，面皆焦，髮始白；七七，任脉虚，太冲脉衰少，天癸竭，地道不通，故形坏而无子也。丈夫八岁，**肾气实**，髮长齿更，二八，**肾气盛**，天癸至，精气溢泻，阴阳和，故能有子；三八，**肾气平均**，筋骨劲强，故真牙生而长极；四八，筋骨隆盛，肌肉满壮；五八，**肾气衰**，髮堕齿槁；六八，阳气衰竭于上，面焦，髮鬓颁白；七八，肝气衰，筋不能动，天癸竭，**精少**，肾脏衰，形体皆极；八八、则齿髮去”。
+>
+> 此段论述，指出了人体的生、长、壮、老、已的自然规律，与**肾中精气的盛衰**密切相关。
 >
 > 《中医药学概论-肾、膀胱》
 
@@ -154,7 +159,7 @@
 
 神是人体的管理者，可以调动气、血、津液等资源完成各种功能，对人体的各种平衡起到控制、管理作用。神主要藏于心，五脏皆有。
 
-> 心在人体诸脏腑中居于首要的地位，对各个脏腑的功能活动起到统领与调节的作用。《灵枢·邪客》说：“心者，五脏六腑之大主，精神之所舍”。《素问·灵兰秘典论》说：“心者，君主之官也，神明出焉。……故主明则下安，……主不明则十二官危”。都突出强调了心在脏腑中的统帅作用。
+> 心在人体诸脏腑中居于首要的地位，对各个脏腑的功能活动起到统领与调节的作用。《灵枢•邪客》说：“心者，五脏六腑之大主，精神之所舍”。《素问•灵兰秘典论》说：“心者，君主之官也，神明出焉。……故主明则下安，……主不明则十二官危”。都突出强调了心在脏腑中的统帅作用。
 >
 > 《中医药学概论-心、小肠》
 
@@ -162,7 +167,7 @@
 
 腠理是肌表、肌肉、脏腑之间的间隙和纹理。因中医非常关注气态物质，所以腠理这种能流通气态物质的组织间隙对中医有重要作用。
 
-> **腠者，是三焦通会元真之处，为血气所注；理者，是皮肤脏腑之文理也（4）。**...
+> **腠者，是三焦通会元真之处，为血气所注；理者，是皮肤脏腑之文理也。**...
 >
 > 所谓腠理，腠，是三焦交通融会元真的地方，又是血气所灌注的处所；理，是皮肤肌肉的纹理。总之，腠理是营卫气血交会出入的门户，又是抗御外邪的屏障。
 >
@@ -174,7 +179,7 @@
 
 人体的要素包括精、神、气、血、津液、元气等，这些要素是如何配合形成适宜的体内环境呢？这个问题是中医的核心问题，也是学习中医的几大难点之一。
 
-人体象一个温室花园，其保持温度的原理和北方家庭用暖气片进行烧水取暖有相似之处，我们将两者进行对比讲解。
+人体像一个温室花园，其保持温度的原理和北方家庭用暖气片进行烧水取暖有相似之处，我们将两者进行对比讲解。
 
 ![](img/%E6%9A%96%E6%B0%94%E5%8E%9F%E7%90%86%E5%9B%BE.jpg)
 
@@ -321,9 +326,9 @@
 
 ## 题目
 
-1. 人体维持正常的体内环境，需要形、津液、---、气态物质、元气、精、神等要素互相配合，协同工作才能完成。
+1. 人体维持正常的体内环境，需要形、津液、 __ __ 、气态物质、元气、精、神等要素互相配合，协同工作才能完成。
 
-2. 脏腑提供了维持体内环境的要素，其中---负责从饮食中提取精华，排除糟粕；-----负责对精华物质进行存储、处理和分配。
+2. 脏腑提供了维持体内环境的要素，其中 __ __ 负责从饮食中提取精华，排除糟粕； __ __ 负责对精华物质进行存储、处理和分配。
 
    
 
