--- a/ok/gl/gl03-0.2.6.0.0.md
+++ b/ok/gl/gl03-0.2.6.0.0.md
@@ -6,7 +6,7 @@
 
 大肠手阳明之脉，起于大指次指之端，循指上廉，出合谷两骨之间，上入两筋之中、循臂上廉，入肘外廉，上臑外前廉，上肩，出髃骨之前廉，上出于柱骨之会上，下入缺盆，络肺，下膈，属大肠。其支者，从缺盆上颈，贯颊，入下齿中，还出挟口，交人中，左之右，右之左，上挟鼻孔。
 
-胃足阳明之脉，起于鼻，之（按：疑是“上”字之误）交頞中，旁纳太阳之脉，下循鼻外，入上齿中，还出挟口，环唇，下交承浆，却循颐后下廉，出大迎，循颊车，上耳前，过客主人，循髮际，至额颅。其支者，从大迎前下人迎，循喉咙，入缺盆，下膈，属胃，络脾。其直着，从缺盆下乳内廉，下挟脐，入气街中，其支者，起于胃口，下循腹里，下至气街中而合，以下髀关，抵伏兔，下膝膑中，下循胫外廉，下足跗，入中趾内间（按：应作“次趾外间”）。其支者，下廉三寸而别，下入中趾外间。其支者，别跗上，入大趾间，出其端。
+胃足阳明之脉，起于鼻，之（按：疑是“上”字之误）交頞中，旁纳太阳之脉，下循鼻外，入上齿中，还出挟口，环唇，下交承浆，却循颐后下廉，出大迎，循颊车，上耳前，过客主人，循髮际，至额颅。其支者，从大迎前下人迎，循喉咙，入缺盆，下膈，属胃，络脾。其直者，从缺盆下乳内廉，下挟脐，入气街中，其支者，起于胃口，下循腹里，下至气街中而合，以下髀关，抵伏兔，下膝膑中，下循胫外廉，下足跗，入中趾内间（按：应作“次趾外间”）。其支者，下廉三寸而别，下入中趾外间。其支者，别跗上，入大趾间，出其端。
 
 脾足太阴之脉，起于大趾之端，循趾内侧白肉际，过核骨后，上内踝前廉，上踹（按：应作“腨”）内，循胫骨后，交出厥阴之前，上膝股内前廉，入腹，属脾，络胃，上膈，挟咽，连舌本，散舌下。其支者，复从胃别上膈，注心中。
 
@@ -14,7 +14,7 @@
 
 小肠手太阳之脉，起于小指之端，循手外侧，上腕，出踝中，直上循臂骨下廉，出肘内侧两筋之间，上循臑外后廉，出肩解，绕肩胛，交肩上，入缺盆，络心，循咽下隔，抵胃，属小肠。其支者，从缺盆循颈，上颊，至目锐眦，却入耳中。其支者，别颊，上䪼，抵鼻，至目内眦，斜络于颧。
 
-膀胱足太阳之脉，起于目内眦，上额，交巅。其支者，从巅至耳上角。其直者，从巅入络脑，还出别下项，循肩膊内，挟脊抵腰中，入循膂，络肾，属膀胱。其支者，从腰中下挟脊，贯臀，入𦛢中。其支者，从膊内左右别下贯胛，挟脊内，过髀枢，循髀外后廉下合腘中，以下贯腨内，出外踝之后，循京骨，至小趾外侧。
+膀胱足太阳之脉，起于目内眦，上额，交巅。其支者，从巅至耳上角。其直者，从巅入络脑，还出别下项，循肩膊内，挟脊抵腰中，入循膂，络肾，属膀胱。其支者，从腰中下挟脊，贯臀，入腘中。其支者，从膊内左右别下贯胛，挟脊内，过髀枢，循髀外后廉下合腘中，以下贯腨内，出外踝之后，循京骨，至小趾外侧。
 
 肾足少阴之脉，起于小趾之下，斜走足心，出于然谷之下，循内踝之后，别入跟中，以上腨内，出腘内廉，上股内后廉，贯脊，属肾，络膀胱。其直者，从肾上贯肝膈，入肺中，循喉咙，挟舌本。其支者，从肺出络心，注胸中。
 
