update ok/gl/gl05.md. 原文：正如朱震亨所说“欲知其内者，当以观乎外；诊于外者，斯以知其内”（《丹溪心法•能合色脉可以万全》）。根据扫描版在引文前增加了冒号“：”。

--- a/ok/gl/gl05.md
+++ b/ok/gl/gl05.md
@@ -50,4 +50,4 @@
 
 诊法，是通过望、闻、问、切四种诊察和搜集病情资料的方法。诊法主要是望、闻、问、切四法，又称四诊。
 
-人体是一个有机的统一整体，通过经络系统等，使局部的病变可以反映到全身，内部的病变可以反映到体表。即所谓：“有诸内者，必形诸外”。所以，通过病人外在的全身的异常表现，可以推知在内的，或某一局部的病变。正如朱震亨所说“欲知其内者，当以观乎外；诊于外者，斯以知其内”（《丹溪心法•能合色脉可以万全》）。望、闻、问、切四种诊察方法，是从不同方面搜集病情资料的主要手段，缺一不可，必须将此四者结合起来应用，即“四诊合参”，才能在全面了解病情的基础上进行准确的辨证。强调四诊中任何一、二诊，而忽视其他诊法，都是片面的。
+人体是一个有机的统一整体，通过经络系统等，使局部的病变可以反映到全身，内部的病变可以反映到体表。即所谓：“有诸内者，必形诸外”。所以，通过病人外在的全身的异常表现，可以推知在内的，或某一局部的病变。正如朱震亨所说：“欲知其内者，当以观乎外；诊于外者，斯以知其内”（《丹溪心法•能合色脉可以万全》）。望、闻、问、切四种诊察方法，是从不同方面搜集病情资料的主要手段，缺一不可，必须将此四者结合起来应用，即“四诊合参”，才能在全面了解病情的基础上进行准确的辨证。强调四诊中任何一、二诊，而忽视其他诊法，都是片面的。
