--- a/ok/fjx/fjx07-0.2.0.0.0.md
+++ b/ok/fjx/fjx07-0.2.0.0.0.md
@@ -30,4 +30,4 @@
 
 〔文献摘录〕“补中益气汤，升阳补中东垣治烦劳内伤身热心烦，头痛恶寒，懒言恶食，脉洪大而虚，或喘，或渴，或阳虚自汗，或气虚不能摄血，或疟痢脾虚，久不能愈，一切清阳下陷，中气不足之证。”（《医方集解》）
 
-柯韵伯：“劳倦．形气衰少，阴虚而生内热者，表证颇同外感，惟东垣知其为劳倦伤脾，谷气不盛，阳气下陷阴中而发热，制补中益气之法。谓风寒外伤其形为有余，脾胃内伤其气为不足，遵《内经》劳者温之，损者益之之义，大忌苦寒之药，选用甘温之品，升其阳以行春生之令。凡脾胃一虚，肺气先绝，故用黄芪护皮毛而开腠理，不令自汗；元气不足，懒言，气喘，人参以补之；炙甘草之甘以泻心火而除烦，补脾胃而生气。此三味除烦热之圣药也。佐白术以健脾；当归以和血；气乱于胸，清浊相干，用陈皮以理之，且以散诸甘药之滞；胃中清气下沉，用升麻、柴胡气之轻而味之薄者，引胃气以上腾，复其本位，便能升浮以行生长之令矣。补中之剂，得发表之品而中自安；益气之剂，赖清气之品而气益倍，此用药有相须之妙也。是方也用以补脾，使地道卑而上行；亦可以补心肺，损其肺者益其气，损其心者调其营卫也，亦可以补肝，木郁则达之也。惟不宜于肾，阴虚于下者不宜升，阳虚于下者更不宜升。凡东垣治脾胃方俱是益气。去当归、白术、加苍术、木香，便是调中；加麦冬、五味辈，便是清暑。此正是医不执方，亦正是医必有方。”（录自《名医方论》）
+柯韵伯：“劳倦，形气衰少，阴虚而生内热者，表证颇同外感，惟东垣知其为劳倦伤脾，谷气不盛，阳气下陷阴中而发热，制补中益气之法。谓风寒外伤其形为有余，脾胃内伤其气为不足，遵《内经》劳者温之，损者益之之义，大忌苦寒之药，选用甘温之品，升其阳以行春生之令。凡脾胃一虚，肺气先绝，故用黄芪护皮毛而开腠理，不令自汗；元气不足，懒言，气喘，人参以补之；炙甘草之甘以泻心火而除烦，补脾胃而生气。此三味除烦热之圣药也。佐白术以健脾；当归以和血；气乱于胸，清浊相干，用陈皮以理之，且以散诸甘药之滞；胃中清气下沉，用升麻、柴胡气之轻而味之薄者，引胃气以上腾，复其本位，便能升浮以行生长之令矣。补中之剂，得发表之品而中自安；益气之剂，赖清气之品而气益倍，此用药有相须之妙也。是方也用以补脾，使地道卑而上行；亦可以补心肺，损其肺者益其气，损其心者调其营卫也，亦可以补肝，木郁则达之也。惟不宜于肾，阴虚于下者不宜升，阳虚于下者更不宜升。凡东垣治脾胃方俱是益气。去当归、白术、加苍术、木香，便是调中；加麦冬、五味辈，便是清暑。此正是医不执方，亦正是医必有方。”（录自《名医方论》）
