--- a/ok/bc/bc03-0.1.4.0.0.md
+++ b/ok/bc/bc03-0.1.4.0.0.md
@@ -1,8 +1,8 @@
 ###    芦 根
 
-**〔原文〕甘益胃，寒降火。治呕哕反胃**，   胃热火升，则呕逆食不下。《金匮》方：芦根煎服。**消渴客热，伤寒内热，止小便数**。肺为水之上源，脾气散精，上归于肺，始能通调水道，下输膀胱。肾为水脏，而主二便，三经有热，则小便数，甚至不能少 忍,火性急速故也。芦中空，故入心肺，清上焦热，热解则肺之气化行， 而小便复其常道矣，**能解鱼蟹河豚毒。取逆水肥厚者**，**去趣节用**。  
+**〔原文〕甘益胃，寒降火。治呕哕反胃**，   胃热火升，则呕逆食不下。《金匮》方：芦根煎服。**消渴客热，伤寒内热，止小便数**。肺为水之上源，脾气散精，上归于肺，始能通调水道，下输膀胱。肾为水脏，而主二便，三经有热，则小便数，甚至不能少 忍,火性急速故也。芦中空，故入心肺，清上焦热，热解则肺之气化行， 而小便复其常道矣，**能解鱼蟹河豚毒。取逆水肥厚者**，**去须节用**。  
 
- 【讲解】**芦根长于清热生津，止呕除烦**。为禾本科多年生 草本植物芦苇的地下茎。采挖后去泥土、须根，剥去皮膜，洗净晒干备用。用鲜者，疗效更佳。 
+ 【讲解】**芦根长于清热生津，止呕除烦**。为禾本科多年生草本植物芦苇的地下茎。采挖后去泥土、须根，剥去皮膜，洗净晒干备用。用鲜者，疗效更佳。 
 
 本品甘寒质轻，入肺、胃二经。长于清肺热而祛痰排脓，清胃热而生津止呕，且有清热而不伤胃，生津而不恋邪的特点。故常用治温病初起或热病伤津，烦热口渴，胃热呕逆及肺热咳嗽、 肺痈等证。又因肺为水之上源；肺热清，气化行，小便自利，故言能清热利尿。亦治小便短赤，热淋涩痛。  
 
