--- a/ok/hk/hk0zl06-0.2.0.0.0.md
+++ b/ok/hk/hk0zl06-0.2.0.0.0.md
@@ -1,3 +1,4 @@
+
 ## 二、怎样诊察与辨证
 
 诊察与辨证的武器，当然是四诊、八纲，但诊察喉科疾病，要在望、闻、问、切四诊基础上，加上一个局部检查法。
@@ -22,7 +23,7 @@
 
 表2  逐项分析综合取舍表
 
-![](\img\表2.svg)
+![](img\表2.svg)
 
 1.运用顺序：
 
@@ -34,23 +35,23 @@
 
 表 4    神经性——聋
 
-!表4
+![](img\表4.svg)
 
 表 5   血热妄行的鼻衄
 
-!表5
+![](img\表5.svg)
 
 表 6  脾不统血的鼻衄
 
-!表6
+![](img\表6.svg)
 
 表 7   急性咽炎
 
-!表7
+![](img\表7.svg)
 
 表 8   慢性咽炎
 
-!表8
+![](img\表8.svg)
 
 （2）选择（特别强调“选择”两字）适合的各种理论根据来解释症状的产生原因。这种理论根据的来源，包括《内经》、各家学说、常规定律以及个人心得见解。也逐症逐项的“填入”表内“现论根据”一格里。为什么一定强调“选择”？因为同样一个症候，可由不同性质的“证”来造成的。例如同样一个腹痈，《素问•举痛论》中谓：“寒气客于小肠，故后泄腹痛矣”。而《素问•六元正纪大论》则称：“火郁之发，民病腹中暴痛”。再举一个脓肿的例子，《灵枢》在同一篇的《痈疽》中，既谓：“寒气客于经络之中，则血泣，……故痈肿”。但同时又说：“大热不止，热胜则肉腐，肉腐则为脓”。你看，这两个截然不同的寒和热，同样可以适用于一个病种或同一个症，不选择怎行！就拿上面脓肿感染来说，凡是冷性脓肿——当然有它冷性的证——，那末应选择前一句。一般感染如疖肿、痈——当然也有它热证的证——，就选择后一句了。这就是选择，而且强调要选择。
 
