--- a/ok/yk/yk0zl02-0.1.0.0.0.md
+++ b/ok/yk/yk0zl02-0.1.0.0.0.md
@@ -4,7 +4,7 @@
 
 1.胞睑：即两目外上下卫护之胞，又名目睥、目裹、眼胞、眼睑等，《黄帝内经》称其为约束，俗名眼皮。胞睑分上下两部分，在上者称上睑，在下者称下睑，亦有“胞者上胞也，睑者下睑也”之说（《银海精微》），故习称上胞下睑。
 
-血睑的边缘称睑弦，又名目唇、睑唇或胞沿。睑弦上生有排列整齐的睫毛。胞睑可以反转，其内面称睑内或睥内，表面红黄相兼，光滑润泽，与眼珠表面紧贴而不相粘连。
+胞睑的边缘称睑弦，又名目唇、睑唇或胞沿。睑弦上生有排列整齐的睫毛。胞睑可以反转，其内面称睑内或睥内，表面红黄相兼，光滑润泽，与眼珠表面紧贴而不相粘连。
 
 上下睑弦的联合处称目眦，近鼻侧者大而圆，故称内眦或大眦；居颞侧者小而锐，故称外眦、小眦或锐眦。内、外二眦合称两眦，俗名眼角。大眦内有红肉一颗，名眦肉（见《银海指南》），为眼前部脉络汇聚之处，色红活而润泽。
 
