--- a/ok/bc/bc06-0.0.1.0.0.md
+++ b/ok/bc/bc06-0.0.1.0.0.md
@@ -1,6 +1,6 @@
 ### 独活
 
-[原文] **辛苦微温。气缓善搜，入足少阴**肾**气分以理伏风(1) 。治本经伤风头痛，头晕目眩，**宜与细辛同用。**风热齿痛，**文潞公《药准》用独活、地黄等分为末，每服三钱。**痉(2) 痫湿痹**， 项背强直，手足反张曰痉；湿流关节，痛而烦曰湿痹。风胜湿，故二活兼能去湿。**奔豚(3) 疝瘕**。肾积曰奔豚，风寒湿客于肾家所致。瘕疝亦然。**有风不动，无风反摇，又名独摇草。**故治风。**《本经》云：独活一名羌活。古方惟用独活后人云是一类二种，遂分用。以形虚大有臼如鬼眼，节疏色黄者为独活；色紫节密，气猛烈者为羌活。并出蜀汉。又云自西羌来者名羌活。**故又名胡王使者。今采诸家所分经络，主治各证，以便施用。
+[原文] **辛苦微温。气缓善搜，入足少阴**肾**气分以理伏风(1) 。治本经伤风头痛，头运目眩，**<small>宜与细辛同用。</small>**风热齿痛，**<small>文潞公《药准》用独活、地黄等分为末，每服三钱。</small>**痉(2) 痫湿痹**， <small>项背强直，手足反张曰痉；湿流关节，痛而烦曰湿痹。风胜湿，故二活兼能去湿。</small>**奔豚(3) 疝瘕**。<small>肾积曰奔豚，风寒湿客于肾家所致。瘕疝亦然。</small>**有风不动，无风反摇，又名独摇草。**<small>故治风。</small>**《本经》云：独活一名羌活。古方惟用独活后人云是一类二种，遂分用。以形虚大有臼如鬼眼，节疏色黄者为独活；色紫节密，气猛烈者为羌活。并出蜀汉。又云自西羌来者名羌活。**<small>故又名胡王使者。今采诸家所分经络，主治各证，以便施用。</small>
 
 **【讲解】**(1) 伏风：指痹证，风寒湿邪偏在于里在下，病程较长者。    (2) 痉：病名。以项背强急，口噤，四肢抽搐，角弓反张为主证。    (3) 奔豚：古病名。为五积之一，属肾之积由肾脏寒气上冲所致。临床特点为发作性气从下腹上冲胸脘，直达咽喉，腹部绞痛，胸闷气急，头昏目眩，心悸易惊，烦躁不安，有的夹杂寒热往来，因其发作时胸腹如有小豚奔闯，故名。
 
