update ok/fjx/fjx01-0.8.0.0.0.md. 〔组成〕白僵蚕炒二钱（10克） 蝉蜕一钱（10克） 广姜黄去皮三分（10克） 生大黄四钱（6~12克）
改为〔组成〕白僵蚕酒炒二钱（10克） 蝉蜕一钱（10克） 广姜黄去皮三分（10克） 生大黄四钱（6~12克）

电子教材有“酒”字的，网络教材缺此字。

--- a/ok/fjx/fjx01-0.8.0.0.0.md
+++ b/ok/fjx/fjx01-0.8.0.0.0.md
@@ -1,6 +1,6 @@
 ## 升降散《寒瘟条辨》
 
-〔组成〕白僵蚕炒二钱（10克） 蝉蜕一钱（10克） 广姜黄去皮三分（10克） 生大黄四钱（6~12克）
+〔组成〕白僵蚕酒炒二钱（10克） 蝉蜕一钱（10克） 广姜黄去皮三分（10克） 生大黄四钱（6~12克）
 
 〔煎服法〕共为细末，病轻者分四次服，每服重一钱八分二厘五毫，用黄酒一盅，蜂蜜半两调匀冷服，中病即止。病重者，分三次服，每服重二钱四分三厘三毫，黄酒盅半，蜜八钱，调匀冷服。最重者，分两次服，每服重三钱六分五厘，黄酒二盅，蜜一两，调匀冷服。炼蜜丸名太极丸，服法同前。（水煎服）
 
