--- a/ok/bc/bc00.1-0.1.0.0.0.md
+++ b/ok/bc/bc00.1-0.1.0.0.0.md
@@ -10,7 +10,7 @@
 
 **凡药轻虚者浮而升，重实者沉而降；味薄者升而生，<small>象春</small>。气薄者降而收，<small>象秋</small>。气厚者浮而长，<small>象夏</small>，味厚者沉而藏，<small>象冬</small>。味平者化而成，<small>象土</small>。气厚味薄者浮而升，味厚气薄者沉而降，气味具厚者能浮能沉，气味俱薄者可升可降。酸咸无升，辛甘无降，寒无浮，热无沉，此升降浮沉之义也。<small>李时珍曰：升者引之以咸寒，则沉而直达下焦，沉者引之以酒，则浮而上至巅顶。一物之中，有根升梢降，生升熟降者是升降在物亦在人也</small>。凡药根之在土中者，半身以上则上升，半身以下则下降，<small>以升苗者为根，以入土者为梢，上焦用根，下焦用梢，半身以上用头，中焦用梢，半身以下用梢。·虽一药而根梢各别，用之而差，服亦罔效</small>。·药之为枝者达四肢，为皮者达皮肤，为心为干者内行脏腑；质之轻者上入心肺，重者下入肝肾；中空者发表，内实者攻里；枯燥者入气分，润泽者入血分。此上下内外，各以其类相从也。**
 
-**凡药色青、味酸、气燥、性属木者，皆入足厥阴肝、足少阳胆经;<small>肝与胆相表里，胆为甲木；肝为乙木</small>。色赤、味苦、气焦、性属火者，皆入手少阴心、手太阳小肠经；<small>心与小肠相表里，小肠为丙火，心为丁火</small>。色黄、味甘、气香、性属土者，皆入足太阴脾、足阳明胃经；<small>脾与胃相表里，胃为戊土，脾为己土</small>。色白、味辛、气腥、性属金者，皆入手太阴肺、手阳明大肠经；<small>肺与大肠相表里，大肠为庚金，肺为辛金．</small>色黑、味咸、气腐、性属水者，皆入足少阴肾、足太阳膀胱经。<small>肾与膀胱相表里，膀胱为壬水，肾为癸水。凡一脏配一腑。腑皆属阳，故为甲丙戊庚壬；脏皆阴，故为乙丁己辛癸也。</small>十二经中，惟手厥阴心包、手少阳三焦经无所主，其经通于足厥阴、少阳，厥阴主血，诸药入肝经血分者，并入心包：少阳主气，诸药入胆经气分者，并入三焦;命门相火，散行于胆、三焦、心包络，故入命门者，并入三焦。此诸药入诸经之部分也。药有相须者，同类而不可离也；<small>如黄柏、知母，破故纸、胡桃之类。</small>相使者，我之佐使也：相恶者，夺我之能也：相畏者，受彼之制也；相反者，两不相合也：相杀者，制彼之毒也。此异同之义也。肝苦急，<small>血燥苦急</small>，急食甘以缓之；肝欲散，<small>木喜条达</small>．急食辛以散之，以辛补之，以酸泻之。<small>以散为补，以敛为泻。</small>心苦缓，<small>缓则散逸</small>。急食酸以收之；心欲软，急食咸以软之，以咸补之，<small>按水能克火，然心以下交于肾为补，取既济之义。</small>以甘泻之。·脾苦湿，急食苦以燥之；脾欲缓，<small>舒和</small>。急食甘以缓之，以甘补之，以苦泻之。肺苦气上逆，<small>火旺克金</small>，急食苦以泻之；肺欲收，急食酸以收之，以酸补之，以辛泄之。肾苦燥，急食辛以润之；肾欲坚，<small>坚固无狂荡之患</small>，急食苦以坚之，以苦补之，以咸泻之。此五脏补泻之义也。**
+**凡药色青、味酸、气燥、性属木者，皆入足厥阴肝、足少阳胆经;<small>肝与胆相表里，胆为甲木，肝为乙木</small>。色赤、味苦、气焦、性属火者，皆入手少阴心、手太阳小肠经；<small>心与小肠相表里，小肠为丙火，心为丁火</small>。色黄、味甘、气香、性属土者，皆入足太阴脾、足阳明胃经；<small>脾与胃相表里，胃为戊土，脾为己土</small>。色白、味辛、气腥、性属金者，皆入手太阴肺、手阳明大肠经；<small>肺与大肠相表里，大肠为庚金，肺为辛金．</small>色黑、味咸、气腐、性属水者，皆入足少阴肾、足太阳膀胱经。<small>肾与膀胱相表里，膀胱为壬水，肾为癸水。凡一脏配一腑。腑皆属阳，故为甲丙戊庚壬；脏皆阴，故为乙丁己辛癸也。</small>十二经中，惟手厥阴心包、手少阳三焦经无所主，其经通于足厥阴、少阳，厥阴主血，诸药入肝经血分者，并入心包：少阳主气，诸药入胆经气分者，并入三焦;命门相火，散行于胆、三焦、心包络，故入命门者，并入三焦。此诸药入诸经之部分也。药有相须者，同类而不可离也；<small>如黄柏、知母，破故纸、胡桃之类。</small>相使者，我之佐使也：相恶者，夺我之能也：相畏者，受彼之制也；相反者，两不相合也：相杀者，制彼之毒也。此异同之义也。肝苦急，<small>血燥苦急</small>，急食甘以缓之；肝欲散，<small>木喜条达</small>．急食辛以散之，以辛补之，以酸泻之。<small>以散为补，以敛为泻。</small>心苦缓，<small>缓则散逸</small>。急食酸以收之；心欲软，急食咸以软之，以咸补之，<small>按水能克火，然心以下交于肾为补，取既济之义。</small>以甘泻之。·脾苦湿，急食苦以燥之；脾欲缓，<small>舒和</small>。急食甘以缓之，以甘补之，以苦泻之。肺苦气上逆，<small>火旺克金</small>，急食苦以泻之；肺欲收，急食酸以收之，以酸补之，以辛泄之。肾苦燥，急食辛以润之；肾欲坚，<small>坚固无狂荡之患</small>，急食苦以坚之，以苦补之，以咸泻之。此五脏补泻之义也。**
 
 **风淫<sup>(12)</sup>于内，治以辛凉，佐以苦甘，以甘缓之，以辛散之。<small>风属木，辛属金，金能胜木，故治以辛凉·过辛恐伤真气，故佐以苦甘。苦胜辛，甘益气也。木性急，故以甘缓之，木喜条达，故以辛散之。</small>热淫于内，治以咸寒，佐以甘苦，以酸收之，以苦发之。<small>水胜火，故治以咸寒,甘胜寒。佐之所以防其过。必甘苦者，防寒之过，而又以泻热气作实也。热淫故以酸收之，热结故以苦发之。</small>湿淫于内，治以苦热，佐以酸淡，以苦燥之，以淡泄之。<small>湿为土气，苦热皆能燥湿。淡能利窍渗湿，用酸者木能制土也。</small>火淫于内，治以咸冷，佐以苦辛，以酸收之，以苦发之。<small>相火畏火也，故治以咸冷。辛能湿润，酸能收敛，苦能泄热，或从其性而升发之也。</small>燥淫于内，治以苦温，佐以甘辛，以苦下之。<small>燥属金，苦属火，火能胜金，故治以苦。甘能缓，辛能润，苦能下，故以为佐也·</small>寒淫于内，治以甘热，佐以苦辛，以咸泻之，以辛润之，以苦坚之。<small>土能制水，热能胜寒，故治以甘热，苦而辛，亦热品也。伤寒内热者，以咸泻之。内燥者，以辛润之，苦能泻热而坚肾，泻中有补也</small>此六淫主治，各有所宜，故药性宜明，而施用贵审也。**
 
