--- a/ok/ya/ya02-0.1.0.0.0.md
+++ b/ok/ya/ya02-0.1.0.0.0.md
@@ -10,7 +10,7 @@
 
 ②[阿胶](https://www.gmzyjc.com/read/bc/bc17-0.3.5.0.0.md)散：方出《小儿药证直诀》。由[阿胶](https://www.gmzyjc.com/read/bc/bc17-0.3.5.0.0.md)一两五分，炒[牛蒡子](https://www.gmzyjc.com/read/bc/bc01-1.2.2.0.0.md)、炙[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)各二钱五分，[马兜铃](https://www.gmzyjc.com/read/bc/bc16-0.3.8.0.0.md)五钱，[杏仁](https://www.gmzyjc.com/read/bc/bc16-0.3.1.0.0.md)七个，炒糯米一两，共为细末，每服一二钱，功能养阴补肺，宁咳止血。
 
-③泻青丸：方出《小儿药正直诀》，又名泻肝丸。[当归](https://www.gmzyjc.com/read/bc/bc17-0.3.3.0.0.md)、[冰片](https://www.gmzyjc.com/read/bc/bc08-0.0.3.0.0.md)、栀子、川芎、[大黄](https://www.gmzyjc.com/read/bc/bc02-0.1.1.0.0.md)（湿纸裹煨）、[羌活](https://www.gmzyjc.com/read/bc/bc01-1.1.6.0.0.md)、[防风](https://www.gmzyjc.com/read/bc/bc01-1.1.5.0.0.md)各等分为末，炼蜜为丸，如[芡实](https://www.gmzyjc.com/read/bc/bc18-0.0.12.0.0.md)大。每日半丸至一丸，[竹叶](https://www.gmzyjc.com/read/bc/bc03-0.1.6.0.0.md)煎汤，用沙糖、温水化下。功能清热泻火。主治肝火郁热，夜卧不安，易惊抽搐，脉洪实者。
+③泻青丸：方出《小儿药证直诀》，又名泻肝丸。[当归](https://www.gmzyjc.com/read/bc/bc17-0.3.3.0.0.md)、[冰片](https://www.gmzyjc.com/read/bc/bc08-0.0.3.0.0.md)、栀子、川芎、[大黄](https://www.gmzyjc.com/read/bc/bc02-0.1.1.0.0.md)（湿纸裹煨）、[羌活](https://www.gmzyjc.com/read/bc/bc01-1.1.6.0.0.md)、[防风](https://www.gmzyjc.com/read/bc/bc01-1.1.5.0.0.md)各等分为末，炼蜜为丸，如[芡实](https://www.gmzyjc.com/read/bc/bc18-0.0.12.0.0.md)大。每日半丸至一丸，[竹叶](https://www.gmzyjc.com/read/bc/bc03-0.1.6.0.0.md)煎汤，用沙糖、温水化下。功能清热泻火。主治肝火郁热，夜卧不安，易惊抽搐，脉洪实者。
 
 ④凉惊丸：方出《小儿药证直诀》。[龙胆草](https://www.gmzyjc.com/read/bc/bc03-0.2.4.0.0.md)、[防风](https://www.gmzyjc.com/read/bc/bc01-1.1.5.0.0.md)、[青黛](https://www.gmzyjc.com/read/bc/bc03-0.4.6.0.0.md)各三钱，钩藤二钱，[黄连](https://www.gmzyjc.com/read/bc/bc03-0.2.2.0.0.md)五钱，[牛黄](https://www.gmzyjc.com/read/bc/bc08-0.0.2.0.0.md)、[麝香](https://www.gmzyjc.com/read/bc/bc08-0.0.1.0.0.md)、[冰片](https://www.gmzyjc.com/read/bc/bc08-0.0.3.0.0.md)各一钱。为细末，面糊为丸，粟米大。每服三至五丸，[金银花](https://www.gmzyjc.com/read/bc/bc03-0.4.1.0.0.md)煎汤送下。治惊癎。
 
