update ok/fjx/fjx07-0.4.0.0.0.md. 第三行，"红枣3～5枚，【朩】煎服”改为水。

--- a/ok/fjx/fjx07-0.4.0.0.0.md
+++ b/ok/fjx/fjx07-0.4.0.0.0.md
@@ -2,7 +2,7 @@
 
 〔组成〕白术一两（30克） 茯神去木一两（30克） 黄芪去芦一两（30克） 龙眼肉一两（30克） 酸枣仁炒去壳一两（30克） 人参半两（15克） 木香不见火半两（1.5克） 甘草炙二钱半（8克）当归一钱（3克） 远志蜜炙一钱（3克）（后二味从《校注妇人良方》补入）
 
-〔服法〕上㕮咀，每服四钱，水一盏半，生姜五片，枣一枚煎至七分，去滓温服，不拘时候。现代用法：加生姜6克、红枣3～5枚，朩煎服。或按上述调整比例放大，做蜜丸，每丸约重9克，每日2～3次。
+〔服法〕上㕮咀，每服四钱，水一盏半，生姜五片，枣一枚煎至七分，去滓温服，不拘时候。现代用法：加生姜6克、红枣3～5枚，水煎服。或按上述调整比例放大，做蜜丸，每丸约重9克，每日2～3次。
 
 〔方解〕本方主治心脾两虚之证。以心悸怔忡、健忘失眠、食少腹胀，面色萎黄，舌淡苔白，脉细弱为主证。以及脾虚不能统血引起的出血证。因为心藏神主血，脾主思而统血，思虑过度，劳伤心脾必然引起以上诸症。本方证的病变重点是脾气亏虚。故方中用人参、黄芪、白术、炙甘草等甘温补脾益气，其中参芪大补脾气；白术苦温，健脾燥湿；炙甘草甘温调中益气健脾，脾胃运化功能振奋，则气血生化旺盛，心血充足，其神可安。当归甘辛温养肝而生心血。茯神、枣仁、龙眼肉、远志养心安神定志。木香理气醒脾，以防益气补血药滋腻滞气，有碍脾胃运化功能。佐以生姜、大枣和胃健脾，调和营卫以资生化。故本方为益脾与养心并进之方，具有益气补血，健脾养心，定志安神的作用。
 
