--- a/ok/yk/yk0zl05-0.1.0.0.0.md
+++ b/ok/yk/yk0zl05-0.1.0.0.0.md
@@ -20,7 +20,7 @@
 
 “淫”是指过盛、不及或不应时而至的反常之气。风、寒、暑、湿、燥、火等六气出现反常情况即为六淫。六淫引起眼病，多由肌肤、口鼻侵犯机体，或直接伤害眼部，可由一种邪气单独为害，亦可由多种邪气兼挟致病，且具有明显的季节性。六淫虽可导致多种眼病，但一般以外障眼病为多。六淫之中，尤以风、火、湿为患最多。现将六淫分述于下。
 
-1.风：风为阳邪，易于犯上，眼位最高，故易受之。风善行而数变，所致眼病多较急较骤，且变化亦速。如风邪突然侵袭所致的暴风客热证，多见眼部卒然红赤热痛，旋即胞睑肿胀，白睛浮壅，且可兼见头痛鼻塞，恶寒发热等。风为百病之长，一年四季皆可致病，且常为外邪引起眼病的先导，它如寒、火、湿、燥等，常随风邪而侵犯机体。风性走窜，甚者动摇，或内由肝阳化风及血虚生风，风胜则动，故均能引起眼部的强直、震颤、动摇不定等证。风邪致病，多表现为胞睑肿胀，白睛暴赤，流泪羞明，或干涩而痒。风犯黑眼，则翳从风生。若风邪中于经络，可致目珠偏斜或旋动不定及胞轮振眺不已。风邪阻滞睑络，则气血不行，可致胞睑失用而下垂。风邪挟热则肿赤痛甚，眵多粘结；挟寒则时流冷泪，或紫赤肿胀；挟湿则痒甚湿烂，病势缠绵；挟燥则眵硬干涩，眼皮紧急。
+1.风：风为阳邪，易于犯上，眼位最高，故易受之。风善行而数变，所致眼病多较急较骤，且变化亦速。如风邪突然侵袭所致的暴风客热证，多见眼部卒然红赤热痛，旋即胞睑肿胀，白睛浮壅，且可兼见头痛鼻塞，恶寒发热等。风为百病之长，一年四季皆可致病，且常为外邪引起眼病的先导，它如寒、火、湿、燥等，常随风邪而侵犯机体。风性走窜，甚者动摇，或内由肝阳化风及血虚生风，风胜则动，故均能引起眼部的强直、震颤、动摇不定等证。风邪致病，多表现为胞睑肿胀，白睛暴赤，流泪羞明，或干涩而痒。风犯黑眼，则翳从风生。若风邪中于经络，可致目珠偏斜或旋动不定及胞轮振跳不已。风邪阻滞睑络，则气血不行，可致胞睑失用而下垂。风邪挟热则肿赤痛甚，眵多粘结；挟寒则时流冷泪，或紫赤肿胀；挟湿则痒甚湿烂，病势缠绵；挟燥则眵硬干涩，眼皮紧急。
 
 2.寒：寒为阴邪，易伤阳气，阳气不足，则目失温养，而见冷泪翳障，视物昏花。寒性凝滞，而主收引。若寒邪留滞经络筋肉之间，可导致经脉急挛而口眼㖞斜；气血凝滞则可致赤脉紫胀，紧涩疼痛。风寒犯目，则涕泪交加。
 
