--- a/ok/bc/bc01-1.2.11.0.0.md
+++ b/ok/bc/bc01-1.2.11.0.0.md
@@ -1,6 +1,6 @@
 ### 浮 萍
 
-〔原文〕辛散轻浮。入肺经，达皮肤，能发扬邪汗，<small>丹溪曰:浮萍发汗，甚于麻黄</small>，止瘙痒、消渴。<small>捣汁服</small>。
+〔原文〕辛散轻浮。入肺经，达皮肤，能发扬邪汗，<small>丹溪曰：浮萍发汗，甚于麻黄</small>，止瘙痒、消渴。<small>捣汁服</small>。
 生于水，又能下水气，利小便，治一切风湿瘫痪。
 <small>浮萍一昧，蜜丸酒服，治三十六种风。浓煮汁浴，治恶疾疮癩遍身</small>。烧烟辟蚊。紫背者良。
 
