--- a/ok/bc/bc01-1.2.11.0.0.md
+++ b/ok/bc/bc01-1.2.11.0.0.md
@@ -6,8 +6,7 @@
 
 【讲解】浮萍主解表透疹，利水消肿。为浮萍科多年生水生漂浮草本植物紫萍的全草。其叶面绿，背紫，故又称“紫背浮萍”。同科植物浮萍（青萍）亦可供药用，然以紫背者用多。
 
-本品味辛性寒，人肺与膀胱经。体轻上浮升散，达皮表，开毛窍，故有发汗解表，透疹，袪风止痒之功。肺为水之上源，肺
-气通利则水下达于膀胱，故又能利水消肿。所以，不论外感风热，风疹瘙痒，湿淫于内的浮肿，小便不利，均可获良效。
+本品味辛性寒，入肺与膀胱经。体轻上浮升散，达皮表，开毛窍，故有发汗解表，透疹，袪风止痒之功。肺为水之上源，肺气通利则水下达于膀胱，故又能利水消肿。所以，不论外感风热，风疹瘙痒，湿淫于内的浮肿，小便不利，均可获良效。
 
 【临征应用】浮萍用于外感风热，发热无汗等证，可配荆芥、薄荷等疏散风热药伍用。麻疹透发不畅，可借其发散之性助其透发，常配薄荷、牛蒡子、蝉蜕等药；风热瘾疹，皮肤瘙痒，
 亦可配荆芥、防风、白蒺藜、白鲜皮相伍内服，，或煎汤外洗。治水肿时，可配车前子、茯苓、泽泻等。
