--- a/ok/yk/yk0zl05-0.2.0.0.0.md
+++ b/ok/yk/yk0zl05-0.2.0.0.0.md
@@ -54,7 +54,7 @@
 
 （五）肾与膀胱功能失调
 
-肾为藏精之所，肾精无亏，则脑髓丰满，目得所养而睛明。肾主水液，肾与膀胱相表里，肾和膀胱.气化功能正常，则水不犯目。且眼之瞳神属肾，故肾与膀胱功能失调可引起眼病，尤以瞳神疾患为多见。
+肾为藏精之所，肾精无亏，则脑髓丰满，目得所养而睛明。肾主水液，肾与膀胱相表里，肾和膀胱气化功能正常，则水不犯目。且眼之瞳神属肾，故肾与膀胱功能失调可引起眼病，尤以瞳神疾患为多见。
 
 1.肾精亏虚：多由先天禀赋不足及过劳伤耗精液，或久病伤肾，年老精衰等所致。由于肾精不足，瞳神失养，可致视物昏矇，睛珠变白，瞳神干缺；又因目系上属于脑，肾精亏虚，精不生髓，则髓海不足，目失脑汁濡润滋养，则视物䀮䀮，甚至目无所见。
 
@@ -98,4 +98,4 @@
 
 2.六淫和七情中，哪些因素导致的眼病最多？
 
-3.试述脏腑、气血功能失调引担眼病的机理。
+3.试述脏腑、气血功能失调引起眼病的机理。
