update ok/bc/bc18.md. 错字

--- a/ok/bc/bc18.md
+++ b/ok/bc/bc18.md
@@ -27,7 +27,7 @@
 滑脱不禁的病证，主要有久病体虚，正气不固所致的自汗盗汗、久泻久痢、遗精、滑精、溲多遗尿及带下崩漏等证，如不及时收敛止涩，延耽日久，则耗气伤津，或损及精血，以致元气日损，故应及时以本类药治之，可防变生他证。
 
 收敛药大多为酸涩之品。陈藏器说：涩可去脱；《本草纲目》 说：脱则散而不收，故用酸涩之药，以敛其耗散。本类药分别具有敛汗、止泻、固精、缩尿、止带、止血、止咳等作用，治疗各种滑脱不禁的证候，能收固涩之效。
-引起滑脱不禁证候的根本原因为正气衰弱，而收敛固涩药的运用。只能治病之标，不能消除滑脱的病因，所以在使用本类药时，须与相应的补益药紀合应用，以期标本兼顾。如气虚自汗、 阴虚盗汗，应分别配伍益气药或滋阴药同用；久泻久利，带下曰久不愈，应与补脾固肾药同用；肾虚的遗精、遗尿尿频，当配伍补肾药；冲任不固、崩漏下血，应与补肝肾、固冲任的药同用； 肺肾虚损、久咳虚喘，当配伍补肺、益肾、纳气药等等。总之， 当根据具体证候，寻求根本，选择配伍，才能增加疗效。
+引起滑脱不禁证候的根本原因为正气衰弱，而收敛固涩药的运用。只能治病之标，不能消除滑脱的病因，所以在使用本类药时，须与相应的补益药配合应用，以期标本兼顾。如气虚自汗、 阴虚盗汗，应分别配伍益气药或滋阴药同用；久泻久利，带下曰久不愈，应与补脾固肾药同用；肾虚的遗精、遗尿尿频，当配伍补肾药；冲任不固、崩漏下血，应与补肝肾、固冲任的药同用； 肺肾虚损、久咳虚喘，当配伍补肺、益肾、纳气药等等。总之， 当根据具体证候，寻求根本，选择配伍，才能增加疗效。
 
 本类药物均具收敛性，使用不当，则易于恋邪，故在表邪未尽，或泻痢、咳嗽初起，或内有湿滞、郁热未清时，均不宜使用，以免致敛邪之弊。
 
