update ok/bc/bc18-0.0.1.0.0.md. 错字

--- a/ok/bc/bc18-0.0.1.0.0.md
+++ b/ok/bc/bc18-0.0.1.0.0.md
@@ -10,4 +10,4 @@
 
 【临证应用】山茱萸配伍熟地、山药、泽泻等，如六味地黄丸，为治肝肾阴虚，头晕目眩、腰膝痠软、遗精等证的基本方。 若以之配伍补骨脂、当归、麝香等，如草还丹，治肾阳不足，阳痿、滑精等症。配伍桑螵蛸、覆盆子、益智仁、沙苑子等，可治小便不禁。配伍人参、附子、龙骨、牡蛎等药，治大汗不止，体虚欲脱之证。配伍乌贼骨、茜草炭、棕皮炭等，如固冲汤，治妇女崩漏及月经过多等证。
 
-【用量用法】 5—10克，煎服，大剂量可至30克。本品温补酸涩，故命门火炽、内有湿热、小便不利者忌里。
+【用量用法】 5—10克，煎服，大剂量可至30克。本品温补酸涩，故命门火炽、内有湿热、小便不利者忌用。
