--- a/ok/bc/bc01-1.2.12.0.0.md
+++ b/ok/bc/bc01-1.2.12.0.0.md
@@ -1,6 +1,6 @@
 ### 木 贼
 
-〔原文〕温微甘苦，中空轻扬，与麻黄同形性，亦能发汗解肌，升散火郁风湿，入足厥阴少阳血分。益肝胆，治目疾，退翳膜，<small>翳乃肝邪郁遏，不能上通于目</small>。及疝痛脱肛,肠风痔瘘,赤痢崩中诸血病。
+〔原文〕温微甘苦，中空轻扬，与麻黄同形性，亦能发汗解肌，升散火郁风湿，入足厥阴少阳血分。益肝胆，治目疾，退翳膜，<small>翳乃肝邪郁遏，不能上通于目</small>。及疝痛脱肛，肠风痔瘘，赤痢崩中诸血病。
 
 **【讲解】木贼表散风热，专治目疾。**为木贼科多年生常绿草本隐花植物木贼的全草。夏季采收，去须根、切段用。
 
