--- a/ok/bc/bc18-0.0.4.0.0.md
+++ b/ok/bc/bc18-0.0.4.0.0.md
@@ -2,13 +2,13 @@
 
 **〔原文〕味甘微寒。养心除烦，利溲止血**。<small>李时珍曰：《素问》麦属火，心之谷也；郑玄谓属木；许慎谓属金。《别录》 云养肝，与郑说合；孙思邈云养心，与《素问》合，当以《素问》为准。按麦秋种夏熟，备受四时之气，南方地暖下湿，不如北产者良。张仲景治妇人脏躁证，悲伤欲绝，状若神灵，用甘麦大枣汤：大枣十枚，小麦一升，甘草一两，每服—两，亦补脾气。《圣惠方》：小麦饭治烦热少睡多渴。</small>
 
-**面粉，甘温。补虚养气，助五脏，厚肠胃。然能壅气作渴， 助湿发热。陈者良**。<small>寒食日纸袋盛悬风处，各寒食面，年久不热，入药尤良。</small>
+**面粉，甘温。补虚养气，助五脏，厚肠胃。然能壅气作渴， 助湿发热。陈者良**。<small>寒食日纸袋盛悬风处，名寒食面，年久不热，入药尤良。</small>
 
 **浮小麦**，<small>即水淘浮起者。</small>**咸凉。止虚汗盗汗，劳热骨蒸**。<small>汗为心液，麦为心谷，浮者无肉，故能凉心。麦麸同功。</small>
 
 **麦麸醋拌蒸，能散血止痛，熨腰脚折伤，风湿痹痛，寒湿脚气。互易至汗出良**。<small>麦之凉，全在皮，故面去皮即热。凡疮疡痘疮溃烂不能着席者，用麦麸装褥卧，性凉而软，诚妙法也 。</small>
 
-【讲解】**小麦功专养心除烦**。为禾本科植物小蒙的成熟种子。
+【讲解】**小麦功专养心除烦**。为禾本科植物小麦的成熟种子。
 
 本品味甘性凉，入心经。善能养心除烦，治脏躁、烦渴、泄利，以及外伤出血，等症。
 
@@ -16,7 +16,7 @@
 
 麦麸即麦之外皮。味甘性凉，和胃化湿，可治湿痹脚气， 但用之较少。常用作炮制辅料，以助开胃消食之功。
 
-【临证应用】小麦配大枣、甘草同用，治妇女脏躁、悲伤欲哭之证，如《金匮》甘麦大枣汤。炒黄研末服酷止泻痢。据报道可用治外科感染，以小麦2斤加水3斤浸泡3曰，捣烂晒干，炒黄研细，加醋调敷疮疖、丹毒等，有效率达90%—100%。
+【临证应用】小麦配大枣、甘草同用，治妇女脏躁、悲伤欲哭之证，如《金匮》甘麦大枣汤。炒黄研末服能止泻痢。据报道可用治外科感染，以小麦2斤加水3斤浸泡3曰，捣烂晒干，炒黄研细，加醋调敷疮疖、丹毒等，有效率达90%—100%。
 
 【用量用法】30—60克 ，煎服。
 
