update ok/bc/bc18-0.0.5.0.0.md. 缺字，错字

--- a/ok/bc/bc18-0.0.5.0.0.md
+++ b/ok/bc/bc18-0.0.5.0.0.md
@@ -4,11 +4,11 @@
 
 **白梅，功用略同。治痰厥僵仆，牙关紧闭**，<small>取肉揩擦牙龈，涎出即开，盖酸先入筋，齿软则易开。若用铁器撬开，恐伤其齿。</small>**惊痫喉痹，敷乳痈肿毒，刺入肉中**。<small>嚼烂罨之即出， 疮中胬肉，捣饼贴之即收。</small>
 
-**青梅，薰黑为乌梅**，<small>稻灰汁淋蒸则不囊。孟诜曰：乌梅十颗，汤煮去核，纳肛中，通大便。</small>**盐渍为白梅**。<small>李时珍曰：梅花于冬而实，于夏得木之全气，故最酸。胆为甲木，肝为乙木，人舌下有四窍，两通胆液，故食酸则津生。食梅齿？者，嚼胡桃即解。衣生霉点者，梅叶煎汤洗之，捣洗葛衣亦佳。</small>
+**青梅，薰黑为乌梅**，<small>稻灰汁淋蒸则不囊。孟诜曰：乌梅十颗，汤煮去核，纳肛中，通大便。</small>**盐渍为白梅**。<small>李时珍曰：梅花于冬而实，于夏得木之全气，故最酸。胆为甲木，肝为乙木，人舌下有四窍，两通胆液，故食酸则津生。食梅齿齼者，嚼胡桃即解。衣生霉点者，梅叶煎汤洗之，捣洗葛衣亦佳。</small>
 
 【讲解】**乌梅具有敛肺涩肠、生津安蛔之功**。为蔷薇科落叶乔木植物梅树的未成熟果实(青梅〉的加工熏制品。去核生用， 或炒炭用。	
 
-本品味酸涩，性平。入肝、脾、肺、大肠经。功能敛肺止咳，可用于肺虚久咳。能涩肠止泻，用于久泻久痢。味酸，且能生津， 尤与甘寒之品同用，酸甘体阴，故能生津止渴，以治消渴证。“蛔得酸则伏”，故为安蛔止吐良药，以治蛔虫引起的呕吐、腹痛之证。此外，外敷能消疮毒，并治胬肉外突。然酸涩之品，外感咳嗽、泻痢初起，及有实邪者均不宜用。
+本品味酸涩，性平。入肝、脾、肺、大肠经。功能敛肺止咳，可用于肺虚久咳。能涩肠止泻，用于久泻久痢。味酸，且能生津， 尤与甘寒之品同用，酸甘化阴，故能生津止渴，以治消渴证。“蛔得酸则伏”，故为安蛔止吐良药，以治蛔虫引起的呕吐、腹痛之证。此外，外敷能消疮毒，并治胬肉外突。然酸涩之品，外感咳嗽、泻痢初起，及有实邪者均不宜用。
 
 白梅为蔷薇科植物梅的未成熟果实，经盐渍而成。味酸涩咸， 性平。多外用擦牙，捣敷或煅存性研末调敷。《本草求真》曰：白梅由于盐渍，味咸则能软坚，若牙关紧闭，死肉黑痣，白梅用之更捷。	
 
