--- a/ok/gl/gl00.0-0.0.2.0.0.md
+++ b/ok/gl/gl00.0-0.0.2.0.0.md
@@ -10,7 +10,7 @@
 
 本书的编写工作，是在光明中医函授大学教材编辑室的主持下进行的，从选题、设计到取材和写法，经过反复推敲而成。在本节編写过程中，曾得到中医同道刘广洲、韩世湧、王琦、王立等同志的鼓励与帮助，谨此一并致谢。
 
-由予编写时间匆促，加之水平有限，书中错漏之处在所难免，敬请批评指正。
+由于编写时间匆促，加之水平有限，书中错漏之处在所难免，敬请批评指正。
 
 编者
 
