--- a/ok/bc/bc01-1.3.0.0.0.md
+++ b/ok/bc/bc01-1.3.0.0.0.md
@@ -4,7 +4,7 @@
 
 一、辛温解表药：均系辛温之品，都有发汗解表的作用，适用于风寒表证。但又各有特性，主治证候亦有区别。
 
-麻黄、桂枝、细辛发散风寒之力较强。麻黄、桂枝均主散太阳经肌表之风寒，然麻黄发汗作用大于桂枝，故用于无汗之表实证;桂枝不论有汗无汗皆可应用。麻黄又能开宣肺气，利水退肿，
+麻黄、桂枝、细辛发散风寒之力较强。麻黄、桂枝均主散太阳经肌表之风寒，然麻黄发汗作用大于桂枝，故用于无汗之表实证；桂枝不论有汗无汗皆可应用。麻黄又能开宣肺气，利水退肿，
 常用于肺气不宣的咳喘及水肿兼表证者；桂枝还可温通血脉，通阳化气，善治妇人血寒经闭，风湿痹证及阳虚不能化气的痰饮蓄水等证。细辛善散少阴经寒邪，多用于外感风寒，发热脉沉者，
 且有祛风湿，止痛及温肺化饮之功，可用于头痛齿痛，风湿痹痛及肺寒痰饮喘咳。惟药性较为峻烈，用时宜慎，用量不可过大。
 
@@ -20,8 +20,7 @@
 
 二、辛凉解表药：均为辛凉之品，具有发散风热的作用，适用于风热表证及温热病初起或麻疹透发不畅等证。其中各药之作用也互有异同。 
 
-薄荷、牛蒡子、蝉蜕有发散风热，宣肺透疹的功效，为风热感冒，温病初期及疹发不透的常用药。三药中薄荷发散力较强，
-牛蒡子、蝉蜕次之。薄荷善散头面风热，兼理气解郁，可治头痛目赤及肝郁不舒之证；牛蒡子又能清热解毒，疮疡肿毒、咽喉疼痛常用;蝉蜕甘寒质轻，长于定惊止痉，明目退翳，多用于小儿惊风，破伤风及眼科疾患。
+薄荷、牛蒡子、蝉蜕有发散风热，宣肺透疹的功效，为风热感冒，温病初期及疹发不透的常用药。三药中薄荷发散力较强，牛蒡子、蝉蜕次之。薄荷善散头面风热，兼理气解郁，可治头痛目赤及肝郁不舒之证；牛蒡子又能清热解毒，疮疡肿毒、咽喉疼痛常用；蝉蜕甘寒质轻，长于定惊止痉，明目退翳，多用于小儿惊风，破伤风及眼科疾患。
 
 桑叶、菊花发散之力不及薄荷，但能清肝火。二者都可散头面风热，治外感风热，头痛目赤，并常相须为用。但桑叶兼能润肺止咳，肺燥咳嗽用之较好；菊花清肝明目作用较桑叶为胜，并能养肝，肝火或阴虚阳亢的头痛眩晕，目赤等证，用之为宜；野
 菊花尤善清热解毒，是治疔疮肿毒的良药。
