--- a/ok/yk/yk0zl06-0.5.1.0.0.md
+++ b/ok/yk/yk0zl06-0.5.1.0.0.md
@@ -26,7 +26,7 @@
 
 是辨别人体正气与病邪盛衰的纲领，也是判断病情顺逆的依据。眼病的虚实，需将眼局部的情况和全身证候结合起来，综合辨析。
 
-眼部的虚证，特点是发病缓、病程长、易反复发作，自觉眼内干涩，不能久视，胞睑下垂，抬举乏力，或胞睑虚浮如球，或白睛血丝淡红，或黑睛生翳经久不愈，或视力渐降，乃至失明，眼前有黑影或白花闪动，或瞳仁变形变色，眼痛则喜按或夜间加剧。全身可兼神疲乏力，面色萎黄或㿠白，心悸气短，自汗盗汗，头晕耳鸣，腰膝疫软，四肢不温等。
+眼部的虚证，特点是发病缓、病程长、易反复发作，自觉眼内干涩，不能久视，胞睑下垂，抬举乏力，或胞睑虚浮如球，或白睛血丝淡红，或黑睛生翳经久不愈，或视力渐降，乃至失明，眼前有黑影或白花闪动，或瞳仁变形变色，眼痛则喜按或夜间加剧。全身可兼神疲乏力，面色萎黄或㿠白，心悸气短，自汗盗汗，头晕耳鸣，腰膝痠软，四肢不温等。
 
 眼部的实证，特点是发病较急，外证较显，自觉症状突出，病情变化迅速。如目痛明显，白昼尤甚，热泪如泉，眵多粘结，视力骤降，乃至不见，视物变形或变色，或眼前呈红光一片。胞睑红肿焮痛而拒按，或胞睑赤烂，两眦红肿胀痛紫暗，白睛红赤浮壅，或抱轮红赤或混赤，黑睛生翳如鹅脂，或黄液上冲，或蟹睛突起，或血灌瞳仁，或瞳仁紧小，或骤发绿风内障。全身可兼面红气粗，口渴便秘，或口苦咽干，胸闷烦躁，舌红苔黄，脉数有力等。
 
