update ok/bc/bc14-0.0.2.0.0.md. 修改错别字“并可便补而不滞”，原文为“并可使补而不滞”

--- a/ok/bc/bc14-0.0.2.0.0.md
+++ b/ok/bc/bc14-0.0.2.0.0.md
@@ -9,7 +9,7 @@
 本品味甘性平，(《本草从新》：味甘，性平，无毒。）入脾、胃经。能促进食物的消化，尤能助米、面、薯、芋等淀粉类食物的消化，并兼有健脾和胃之功。但本品健脾和胃与参术不同，人参，白术为补益药，以增强脾的功能而助消化；麦芽为消导药，以消化停食积滞，而使脾胃复运。故对于消化不良、食欲不振而兼脾胃虚弱者更为适宜。本品又有抑制乳汁分泌而有回乳之功。凡妇女断乳或乳汁郁积而致乳房胀痛者，用之可收到回乳消胀之效。但哺乳期不宜服用，以免乳汁减少。
     
 
-【临证应用】 麦芽以消散为主，与山楂、六神曲等配伍，能消食物积滞，治消化不良，不思饮食，脘闷腹胀之证；若脾胃虚弱而运化无力者，亦可配补脾益气药党参、白术等同用。并可便补而不滞、消不伤正。至于治乳汁郁积，乳房胀痛，可单用生麦芽60克，水煎分两次服，有一定疗效。
+【临证应用】 麦芽以消散为主，与山楂、六神曲等配伍，能消食物积滞，治消化不良，不思饮食，脘闷腹胀之证；若脾胃虚弱而运化无力者，亦可配补脾益气药党参、白术等同用。并可使补而不滞、消不伤正。至于治乳汁郁积，乳房胀痛，可单用生麦芽60克，水煎分两次服，有一定疗效。
 
 【用量用法】  10-15克，大剂量30-120克，煎服。回乳宜生用。消食宜炒用。
 
