--- a/ok/yk/yk0zl06-0.5.2.0.0.md
+++ b/ok/yk/yk0zl06-0.5.2.0.0.md
@@ -4,7 +4,7 @@
 
 （一）辨肉轮病变
 
-肉轮胞睑，内应脾胃，其病变多与牌胃有关。
+肉轮胞睑，内应脾胃，其病变多与脾胃有关。
 
 胞睑红肿疼痛，多是脾胃积热；若红肿痒痛而湿烂，多属脾经风热挟湿；胞睑皮下生硬结，肤色如常，触之不痛，推之可移，多由脾经痰湿结聚所致；若胞脸浮肿，皮色光亮，不红不痛，多属脾虚有湿，或因风邪阻络、气机不畅所致。
 
