update ok/bc/bc14-0.0.4.0.0.md. 1、“数日口中闻酒香，积迷散”中原文为“数日口中闻酒香，积遂散” 2、以五月五日后面标点符号原文为顿号 3、“窨生黄衣”原文为罯

--- a/ok/bc/bc14-0.0.4.0.0.md
+++ b/ok/bc/bc14-0.0.4.0.0.md
@@ -1,6 +1,6 @@
 ###  神曲
 
-【原文】  **辛散气，甘调中，温开胃。化水谷、消积滞**。<small>《医余》曰：有伤棕子成积，用曲末少加木香，盐汤下，数日口中闻酒香，积迷散。</small>**治痰逆癥结，泻痢胀满。回乳**<small>炒研，酒服二钱，日二。</small>**下胎**。<small>产后血晕，末服亦良。</small>**亦治目病**。<small>《启微集》曰：生用能发其生气，熟用能敛其暴气。</small>**造曲法：以五月五日，六月六日，用白面百斤，赤豆末、杏仁泥、青蒿、苍耳、红蓼汁各三升，以配青龙、白虎、朱雀、玄武、螣蛇、勾陈六神，通和作饼，窨生黄衣，晒收。陈者良。炒用**。
+【原文】  **辛散气，甘调中，温开胃。化水谷、消积滞**。<small>《医余》曰：有伤棕子成积，用曲末少加木香，盐汤下，数日口中闻酒香，积遂散。</small>**治痰逆癥结，泻痢胀满。回乳**<small>炒研，酒服二钱，日二。</small>**下胎**。<small>产后血晕，末服亦良。</small>**亦治目病**。<small>《启微集》曰：生用能发其生气，熟用能敛其暴气。</small>**造曲法：以五月五日、六月六日，用白面百斤，赤豆末、杏仁泥、青蒿、苍耳、红蓼汁各三升，以配青龙、白虎、朱雀、玄武、螣蛇、勾陈六神，通和作饼，罯生黄衣，晒收。陈者良。炒用**。
     
 
 【讲解】 **神曲善能消化榖食，又能健脾和中**。为面粉和其他药物（青蒿、苍耳、辣蓼、杏仁、赤小豆）混合后经发酵而成的加工品。又名六神曲。切成小方块，一般以陈久者为佳。原药生用，炒用或炒焦用。
