--- a/ok/bc/bc01-1.3.0.0.0.md
+++ b/ok/bc/bc01-1.3.0.0.0.md
@@ -8,7 +8,7 @@
 常用于肺气不宣的咳喘及水肿兼表证者；桂枝还可温通血脉，通阳化气，善治妇人血寒经闭，风湿痹证及阳虚不能化气的痰饮蓄水等证。细辛善散少阴经寒邪，多用于外感风寒，发热脉沉者，
 且有祛风湿，止痛及温肺化饮之功，可用于头痛齿痛，风湿痹痛及肺寒痰饮喘咳。惟药性较为峻烈，用时宜慎，用量不可过大。
 
-紫苏、荊芥、防风三药发汗作用不及麻、桂之峻，较为缓和，为一般风寒感冒常用之品。其中紫苏散寒力较强，并有行气安胎之功，风寒感冒兼有胸腹胀满，恶心呕逆者更为适宜；荆芥辛散疏风，无论风寒、风热皆可应用，兼能透疹止血，疹出不透及各种出血皆可选用；防风祛风为主，本品甘缓不峻，为风药中之润
+紫苏、荆芥、防风三药发汗作用不及麻、桂之峻，较为缓和，为一般风寒感冒常用之品。其中紫苏散寒力较强，并有行气安胎之功，风寒感冒兼有胸腹胀满，恶心呕逆者更为适宜；荆芥辛散疏风，无论风寒、风热皆可应用，兼能透疹止血，疹出不透及各种出血皆可选用；防风祛风为主，本品甘缓不峻，为风药中之润
 剂，功同荆芥。外感风邪，二药常相须为用。但防风还能胜湿止痛，也是治风湿痹证的要药。
 
 羌活、藁本、白芷均有发表、祛风湿止痛的作用，用治感冒头痛。然羌活、藁本温燥升散，入太阳经，以治巅顶头痛连及后脑者；白芷归阳明经，治前额头痛，眉棱骨痛，牙痛及鼻渊等证。
