--- a/ok/gl/gl03-0.2.5.0.0.md
+++ b/ok/gl/gl03-0.2.5.0.0.md
@@ -1,4 +1,4 @@
-### 五、十二经脉的循行部位*
+### 五、十二经脉的循行部位
 
 #### （一）手太阴肺经
 
@@ -66,7 +66,7 @@
 
 分支：从头顶部分出，到耳上角部。
 
-直行者：从头顶部分别向后行至枕骨处，进入颅腔，络脑，回出分别下行到项部（[天柱](https://www.gmzyjc.com/read/zjs/zjs3.1.7-8-0.0.1.3.10.md)穴），下行交会于[大椎](https://www.gmzyjc.com/read/zjs/zjs3.2.2-0.0.1.3.14.md)穴，再分左右沿肩胛内侧，脊柱两旁（一寸五分)，到达腰部（[肾俞](https://www.gmzyjc.com/read/zjs/zjs3.1.7-8-0.0.1.3.23.md)穴），进人脊柱两旁的肌肉（膂），深入体腔，络肾，属膀胱。
+直行者：从头顶部分别向后行至枕骨处，进入颅腔，络脑，回出分别下行到项部（[天柱](https://www.gmzyjc.com/read/zjs/zjs3.1.7-8-0.0.1.3.10.md)穴），下行交会于[大椎](https://www.gmzyjc.com/read/zjs/zjs3.2.2-0.0.1.3.14.md)穴，再分左右沿肩胛内侧，脊柱两旁（一寸五分)，到达腰部（[肾俞](https://www.gmzyjc.com/read/zjs/zjs3.1.7-8-0.0.1.3.23.md)穴），进入脊柱两旁的肌肉（膂），深入体腔，络肾，属膀胱。
 
 分支：从腰部分出，沿脊柱两旁下行，穿过臀部，从大腿后侧外缘下行至腘窝中（[委中](https://www.gmzyjc.com/read/zjs/zjs3.1.7-8-0.0.1.3.40.md)穴）。
 
