--- a/ok/yk/yk0zl06-0.5.2.0.0.md
+++ b/ok/yk/yk0zl06-0.5.2.0.0.md
@@ -6,9 +6,9 @@
 
 肉轮胞睑，内应脾胃，其病变多与牌胃有关。
 
-胞睑红肿疼痛，多是脾胃积热；若红肿痒痛而湿烂，多属脾经风热挟湿；胞睑皮下生硬结，肤色如常，触之不痛，推之可移，多由脾经痰湿结聚所致；若胞脸浮肿，皮色光亮，不红不痛，多属脾虚有湿，或因风邪阻络、气机不畅所致。
+胞睑红肿疼痛，多是脾胃积热；若红肿痒痛而湿烂，多属脾经风热挟湿；胞睑皮下生硬结，肤色如常，触之不痛，推之可移，多由脾经痰湿结聚所致；若胞睑浮肿，皮色光亮，不红不痛，多属脾虚有湿，或因风邪阻络、气机不畅所致。
 
-上睑下垂，不能随意抬举，多属脾虚气陷。若兼目珠转动失灵，多因风痰阻络或肝风内动所致。胞轮振跳，多因血虚生风；频频眨目，多是脾虚生凤，或脾虚肝旺。
+上睑下垂，不能随意抬举，多属脾虚气陷。若兼目珠转动失灵，多因风痰阻络或肝风内动所致。胞轮振跳，多因血虚生风；频频眨目，多是脾虚生风，或脾虚肝旺。
 
 睑弦赤烂、瘙痒疼痛，多因脾胃湿热兼挟风邪；若痒甚且有痂皮者，为血燥风盛；若赤烂腥秽，红赤如涂硃色，为热毒交炽。
 
