--- a/ok/gl/gl03-0.3.0.0.0.md
+++ b/ok/gl/gl03-0.3.0.0.0.md
@@ -1,4 +1,4 @@
-## 第三节  奇经八脉*
+## 第三节  奇经八脉
 
 奇经之所以称“奇”，一是奇经独立于十二经脉之外，不受十二经支配（“不拘于经”）；二是无直接配合的脏腑；三是无表里配偶之经。奇经包括督脉、任脉、冲脉、带脉、阴跷脉、阳跷脉、阴维脉、阳维脉八脉，所以又称奇经八脉。
 
