--- a/ok/gl/gl04-0.1.1.1.0.md
+++ b/ok/gl/gl04-0.1.1.1.0.md
@@ -4,9 +4,9 @@
 
 1.风邪的性质与致病特点
 
-（1）风邪为百病之始，能兼其它邪气  寒、湿、燥、热诸邪，每多依附与风而侵犯人体，如风寒、风湿、风热之类。所以，风邪往往为外感疾病的先导，前人说：“风者，百病之始也”，“风为百病之长”，都是这个意思。
+（1）风邪为百病之始，能兼其它邪气  寒、湿、燥、热诸邪，每多依附于风而侵犯人体，如风寒、风湿、风热之类。所以，风邪往往为外感疾病的先导，前人说：“风者，百病之始也”，“风为百病之长”，都是这个意思。
 
-（2）风为阳邪，其性开泄，易伤人阳位  风为春季之主气，具有升发、向上、向外的特点，故属阳邪。所以风邪伤人，容易侵犯人体的阳位，如：上部（头面、巅顶等）和肌表（皮毛、腠理、肌肉等），并使皮毛腠理开泄，出现汗出、恶风等症状。
+（2）风为阳邪，其性开泄，易伤人阳位，风为春季之主气，具有升发、向上、向外的特点，故属阳邪。所以风邪伤人，容易侵犯人体的阳位，如：上部（头面、巅顶等）和肌表（皮毛、腠理、肌肉等），并使皮毛腠理开泄，出现汗出、恶风等症状。
 
 （3）风性善行数变  “风性善行”，是指风病的病位游走不定而言。如痹证，若其关节疼痛是上下左右走串不定的，这属风邪偏胜的病变，便称它为“行痹”或“风痹”。
 
