--- a/ok/gl/gl03-0.1.0.0.0.md
+++ b/ok/gl/gl03-0.1.0.0.0.md
@@ -1,4 +1,4 @@
-## 第一节 经络与经络系统的组成*
+## 第一节 经络与经络系统的组成
 
 ### 一、经络
 
@@ -16,4 +16,4 @@
 
 皮部是十二经脉的功能活动在体表的反映部位，又称十二皮部。
 
-![输入图片说明](img/%E7%BB%8F%E7%BB%9C%E7%B3%BB%E7%BB%9F%E7%AE%80%E8%A1%A8600DPI.png)
+![输入图片说明](img/3经络系统简表2.png)
