--- a/ok/bc/bc06-0.0.3.0.0.md
+++ b/ok/bc/bc06-0.0.3.0.0.md
@@ -2,7 +2,7 @@
 
 [原文] **大苦大寒。**《 本经》平，《别录》温。**太阳**膀胱。**经药。能行十二经，通腠理，利九窍，泻下焦血分湿热，为疗风水(1)之要药。治肺气喘嗽，**水湿。**热气诸痫，**降气下痰。**湿疟脚气，**足伤寒湿为脚气。寒湿郁而为热、湿则肿，热则痛。防已为主药，湿加苡仁、苍术、木瓜、木通，热加芩、柏、风加羌活、萆薢，痰加竹沥、南星，痛加香附、木香，活血加四物，大便秘加桃仁、红花，小便秘加牛膝、泽泻，痛连臂加桂枝、威灵仙，痛连胁加胆草。又有足跟痛者，属肾虚，不与脚气同论。 **水肿风肿，痈肿恶疮。或湿热流入十二经，致二阴不通(2)者，非此不可。然性险而健，阴虚及湿热在上焦气分者禁用。**《十剂》曰：通可去滞，通草、防己之是也。通草即木通，是徐之才亦以行水者，为通与燥剂无以别矣。木通甘淡，泻气分湿热；防己苦寒，泻血分湿热。本集以行水为通剂，改热药为燥剂。**出汉中，根大而虚通， 心有花纹，色黄，名汉防己；黑点黄腥木强者，名木防己，不佳。**陈藏器曰：治风用木防己，治水用汉防己。**酒洗用。恶细辛，畏萆薢。**
 
-【讲解】 (1) 风水，水肿病的一种。多由风邪侵袭，肺气失于宣降，不能通调水道，水湿潴留体内而急骤发生四肢浮肿，小便不利，恶风者。    (2)二阴不通：二阴即前阴和后阴的合称。本文指大小便不利。
+【讲解】 (1) 风水：水肿病的一种。多由风邪侵袭，肺气失于宣降，不能通调水道，水湿潴留体内而急骤发生四肢浮肿，小便不利，恶风者。    (2)二阴不通：二阴即前阴和后阴的合称。本文指大小便不利。
 
 **防已有汉防已与木防己之分。二者都能利水，祛风湿，止痛。利水消肿以汉防已为优，祛风止痛以木防已为佳**。为防己科多年生木质藤本植物粉防己或马兜铃科多年生缠绕草本植物广防己的根。前者药材称汉防己，后者药材称木防己。皆切片生用。汉防已根圆柱状，质坚粉性大，内面类白色有花纹；木防己切面淡黄白色，有筋，质轻如木。
 
