--- a/ok/fjx/fjx11-0.1.0.0.0.md
+++ b/ok/fjx/fjx11-0.1.0.0.0.md
@@ -8,7 +8,7 @@
 水一碗，煎六分，频频二、三次滚热服（现代用法：水煎服）。
 
 ### 〔讲解〕
-本方为治燥热伤肺的主要方剂，主治温燥伤肺，气阴两伤。具有清燥润肺的作用，方中桑叶轻宣肺燥，石膏清肺胃燥热，两药合用，能泻肺胃燥热，以治其致病之源为君。燥热伤肺，气阴两伤，故用阿胶、麦冬、胡麻仁润肺滋液为臣。《难经》云：“损其肺者益其气”。故用人参、甘草益气生津；《素问·藏气法时论》云：“肺苦气上逆，急食苦以泄之”故用杏仁、枇把叶之苦，以泄肺气，兼润燥以治咳喘，此四药共为佐药。甘草调和诸药为使。诸药合用，使肺金之燥得以滋润，肺气之膹郁者，得以肃降,则诸证自解。柯韵伯甚赞此方为“用意深，取药当”，故为临床所常用。原书方后云：血枯加生地，痰多加象贝母，瓜蒌，热甚加犀、羚、牛黄。
+本方为治燥热伤肺的主要方剂，主治温燥伤肺，气阴两伤。具有清燥润肺的作用，方中桑叶轻宣肺燥，石膏清肺胃燥热，两药合用，能泻肺胃燥热，以治其致病之源为君。燥热伤肺，气阴两伤，故用阿胶、麦冬、胡麻仁润肺滋液为臣。《难经》云：“损其肺者益其气”。故用人参、甘草益气生津；《素问·藏气法时论》云：“肺苦气上逆，急食苦以泄之”故用杏仁、枇把叶之苦，以泄肺气，兼润燥以治咳喘，此四药共为佐药。甘草调和诸药为使。诸药合用，使肺金之燥得以滋润，肺气之膹郁者，得以肃降，则诸证自解。柯韵伯甚赞此方为“用意深，取药当”，故为临床所常用。原书方后云：血枯加生地，痰多加象贝母，瓜蒌，热甚加犀、羚、牛黄。
 
 本方含滋腻之品，脾胃虚弱者慎用。
 
@@ -22,4 +22,4 @@
 若咳血加侧柏叶、仙鹤草、白芨。
 
 ### 〔文献摘录〕
-张秉成：“夫燥之一证，有金燥，有火燥，前已论之详矣。此云为喻氏独创，另具卓识，发为议论，后人亦无从置辨。虽其主治因无金燥火燥之分，而细阅其方，仍从火燥一端起见，此必六淫火邪，外伤于肺，而肺之津液素亏，为火刑逼，是以见诸气膹诸痿喘呕之象。然外来之火．非徒用清降可愈。经有火郁发之之说。故以桑叶之轻宣肌表者，以解外来之邪，且此物得金气而柔润不调，取之为君。石膏甘寒色自，直清肺部之火，禀西方清肃之气，以治其主病。肺与大肠为表里，火逼津枯，肺燥则大肠亦燥，故以杏仁、麻仁降肺而润肠。阿胶、麦冬以保肺之津液。人参、甘草以补肺之母气。枇杷叶苦以降气，除热消痰，使金令得以下行，则膹郁喘呕之证，皆可痊矣。”（成方便读》）
+张秉成：“夫燥之一证，有金燥，有火燥，前已论之详矣。此云为喻氏独创，另具卓识，发为议论，后人亦无从置辨。虽其主治因无金燥火燥之分，而细阅其方，仍从火燥一端起见，此必六淫火邪，外伤于肺，而肺之津液素亏，为火刑逼，是以见诸气膹诸痿喘呕之象。然外来之火，非徒用清降可愈。经有火郁发之之说。故以桑叶之轻宣肌表者，以解外来之邪，且此物得金气而柔润不调，取之为君。石膏甘寒色白，直清肺部之火，禀西方清肃之气，以治其主病。肺与大肠为表里，火逼津枯，肺燥则大肠亦燥，故以杏仁、麻仁降肺而润肠。阿胶、麦冬以保肺之津液。人参、甘草以补肺之母气。枇杷叶苦以降气，除热消痰，使金令得以下行，则膹郁喘呕之证，皆可痊矣。”（《成方便读》）
