--- a/ok/bc/bc03-0.1.7.0.0.md
+++ b/ok/bc/bc03-0.1.7.0.0.md
@@ -8,6 +8,6 @@
 
 本品苦辛性寒，主入肝经。苦寒泄热，辛能散结，故有清肝火、散郁结之功，对瘰疬癭瘤，目赤肿痛及头痛眩晕诸证，均为常用之药。
 
-【临证应用】 夏枯草角于痰火郁结的瘰疬瘿瘤，可单用煎服或熬膏服，或与元参、牡蛎、昆布等化痰软坚散结药同用。若与石决明、菊花、黄芩等清肝泻火药配伍，可治肝火上炎所致的目赤肿痛，头痛眩晕等证。治目珠疼痛，属于痛久伤血者，则须与当归、生地、白芍等补血养肝药配伍。近年来用于现代医学的高血压病，属于肝热阳亢型的也获良效。在治疗肿瘤的方剂中，亦常加入本品，如治淋巴肿瘤时，被视为主要药物之一。
+【临证应用】 夏枯草用于痰火郁结的瘰疬瘿瘤，可单用煎服或熬膏服，或与元参、牡蛎、昆布等化痰软坚散结药同用。若与石决明、菊花、黄芩等清肝泻火药配伍，可治肝火上炎所致的目赤肿痛，头痛眩晕等证。治目珠疼痛，属于痛久伤血者，则须与当归、生地、白芍等补血养肝药配伍。近年来用于现代医学的高血压病，属于肝热阳亢型的也获良效。在治疗肿瘤的方剂中，亦常加入本品，如治淋巴肿瘤时，被视为主要药物之一。
 
 【用量用法】10—15克，煎服或熬膏服，或煎汤代茶。
