--- a/ok/bc/bc03-0.1.8.0.0.md
+++ b/ok/bc/bc03-0.1.8.0.0.md
@@ -1,8 +1,8 @@
 ###    决明子   
 
-**〔原文〕甘苦咸平。入肝经，除风热。治一切目疾，故有决明之名。又曰益肾精**。瞳子神光属肾。陈日华日：明目甚于黑豆，作枕治头风。**状如马蹄，俗呼马蹄决明。捣碎煎，恶大麻仁**。
+**〔原文〕甘苦咸平。入肝经，除风热。治一切目疾，故有决明之名。又曰益肾精**。瞳子神光属肾。陈日华曰：明目甚于黑豆，作枕治头风。**状如马蹄，俗呼马蹄决明。捣碎煎，恶大麻仁**。
 
-【讲解】**决明子长于清肝明目，兼能益肾通便。**为豆科一 年生草本植物决明的成熟种子。其干燥种子呈菱形，状如马蹄，故有马蹄决明之称。生用，或炒用。
+【讲解】**决明子长于清肝明目，兼能益肾通便。**为豆科一 年生草本植物决明的成熟种子。其干燥种子呈菱方形，状如马蹄，故有马蹄决明之称。生用，或炒用。
 
 本品甘苦微寒，质油润。入肝、肾、大肠经。苦寒人肝经以清肝火；味甘补肾而润肠燥；气禀轻扬而善散风热，能升能降，为其特长。有较好的明目作用，遂以其功而命名，故为眼科常用药，尤以治风热郁火之目赤肿痛，应用最多。
 
