--- a/ok/bc/bc03-0.1.10.0.0.md
+++ b/ok/bc/bc03-0.1.10.0.0.md
@@ -8,6 +8,6 @@
 
 本品味甘，性微寒。入肝经。盖肝开窍于目，目得血而能视，肝虚则目盲无所见，肝热则目赤多眵。本品既可清肝热，又能养肝血，润肝燥，故不论实证虚证之目疾，如目赤肿痛，羞明，多眵多泪，及目昏干涩，目生翳障等，均可应用，尤以肝肾虚而有热者，最为适宜。
 
-【临证应用】密蒙花用于肝热目疾，赤肿多泪，常配菊花、木贼、石决明等同用，以清肝热面明目退翳。用于肝虚而肴热， 目昏干涩或生翳障者，可与拘杞子、菟丝子、沙苑子等养肝明目药同用。
+【临证应用】密蒙花用于肝热目疾，赤肿多泪，常配菊花、木贼、石决明等同用，以清肝热而明目退翳。用于肝虚而有热， 目昏干涩或生翳障者，可与枸杞子、菟丝子、沙苑子等养肝明目药同用。
 
 【用量用法】   6—10克，煎服。  
