update ok/bc/bc05-0.0.11.0.0.md. “可酡海金砂、滑石等治热淋或石淋”改为“可配海金砂、滑石等治热淋或石淋”

--- a/ok/bc/bc05-0.0.11.0.0.md
+++ b/ok/bc/bc05-0.0.11.0.0.md
@@ -8,7 +8,7 @@
 
 至于益精气，补五劳，当是《本经》治劳热邪气，指劳力伤津，癃闭不通之邪热而言，非虚劳之谓。治发背，可能来自《纲目》“主崩漏、金疮”等，后世少用。
 
-【临证应用】石韦清热、利水、通淋。可酡海金砂、滑石等治热淋或石淋；配白茅根、蒲黄等治血淋。用其清肺化痰止咳之功，可治现代医学之急、慢性支气管炎。
+【临证应用】石韦清热、利水、通淋。可配海金砂、滑石等治热淋或石淋；配白茅根、蒲黄等治血淋。用其清肺化痰止咳之功，可治现代医学之急、慢性支气管炎。
 
 近年来试用石韦（石韦30克、红枣15克，甘草3克，水煎服。每日一剂）治疗放射疗法和化学疗法引起的白血球下降，取得一定的疗效，供临床参考。
 
