update ok/hk/hk0zl07-0.2.0.0.0.md. 肠无氷份 水分 一剂知、二剂已 剂误为制字 甚至产生流弊  少了产生二字 窒带 室带

--- a/ok/hk/hk0zl07-0.2.0.0.0.md
+++ b/ok/hk/hk0zl07-0.2.0.0.0.md
@@ -10,15 +10,15 @@
 
 2.通腑攻下：一般通便的方药，统称为通腑攻下剂或通腑泻下剂。取用此法时，必须表邪已解，里实已成的阶段才能使用。在临床运用时，更宜辨别邪正的盛衰，然后考虑药力的轻重以及病人的承受程度。同时泻下剂大多容易损耗胃气、胃阴，一般应当中病即止，以免克伐过甚。喉科对慢性病及虚人多取润下。对急症及实体者多取峻下。
 
-（1）润下：适用于虚证、虚人及久病者。大多以慢性咽炎、慢性喉炎、复发性口腔炎等为多。因为肺阴早已亏损，津液长期不充，肺与大肠相为表里，肺枯必然肠燥，肠燥势必难固。同时更以大便，不能下通，虚火更加上逼，形成了一个恶性螺旋型循环。所以本法是取用滋阴润燥的办法，使干结润泽下行而不伤津液，取药取以含油量较多的果仁类药物。津亏者血必燥，因为津血同源。津枯血燥，肠无氷份，大便那得不干结而正常。常用代表方有脾约麻仁丸、五仁汤之类。
+（1）润下：适用于虚证、虚人及久病者。大多以慢性咽炎、慢性喉炎、复发性口腔炎等为多。因为肺阴早已亏损，津液长期不充，肺与大肠相为表里，肺枯必然肠燥，肠燥势必难固。同时更以大便，不能下通，虚火更加上逼，形成了一个恶性螺旋型循环。所以本法是取用滋阴润燥的办法，使干结润泽下行而不伤津液，取药取以含油量较多的果仁类药物。津亏者血必燥，因为津血同源。津枯血燥，肠无水份，大便那得不干结而正常。常用代表方有脾约麻仁丸、五仁汤之类。
 
-（2）峻下：是取用药力猛峻凌厉的力量，把实邪结热；排出体外。称之为“釜底抽薪”。凡急性咽炎、急慢喉炎、会厌炎、扁桃体周围脓肿、急性口腔炎等，在高烧不退，大便多日不解，口渴狂饮，烦躁不宁，白细胞总数、中性无限制地增多时，可以取用。如若运用恰当，真可以达到“一制知、二剂已”的疗效。
+（2）峻下：是取用药力猛峻凌厉的力量，把实邪结热；排出体外。称之为“釜底抽薪”。凡急性咽炎、急慢喉炎、会厌炎、扁桃体周围脓肿、急性口腔炎等，在高烧不退，大便多日不解，口渴狂饮，烦躁不宁，白细胞总数、中性无限制地增多时，可以取用。如若运用恰当，真可以达到“一剂知、二剂已”的疗效。
 
 3.祛寒温中：在喉科比较少用，仅仅用于急性病中寒凉直中的失音，以及慢性病中某些口腔粘膜病。前者为陡然接受强烈的重寒酷冷，致发音突然失声，言不能岀（习惯上称为寒闭失音）。在喉科文献中也记述不多，唯《喉科紫珍集》中第十七种阴毒喉风的：“受非常暴寒，少阴证”颇相符合。后者为口腔病久病不瘥，五脏无温，阳气消失。所以前者常用半夏桂枝汤。此方岀《温病条辨》，但它的前身是《类证活人书》用以治疗“暴寒中人，咽痛”的半夏桂枝甘草汤。后者常用附桂八味汤。
 
 4.清热解毒：
 
-（1）清热解毒，在喉科里最多用的法则。大凡取用温药、热药而导致的副作用甚致产生流弊，显而易见，而且反应也快。误用清凉药引起的副作用甚至流弊，难以暴露，反应也更不明显。所以历来医务界就有“与其误取温热，曷若错用清凉”的习惯。其实误用热药的流弊，正因为明显而易于补救。而误用凉药的流弊，正因为隐晦而难于发现、纠正，致许多医家、病家身受其害而不自知。同样清热解毒药的流弊，甘寒解毒比苦寒解毒要小得多，万一误用，也易于纠正。所以审慎的、经验丰富的医家，都善用甘寒解毒药。所谓甘寒解毒剂（药），主要是不采取大苦大寒的药而采用甘淡和平的药来清热解毒。论作用，当然不及苦寒的立竿见影，凌厉有力。但对夹有表邪的、津亏的、体弱的人是不会产生不良后果。此外，在甘寒剂中还有两个独具的作用，就是有滋阴生津的作用（如石膏、芦根、花粉、知母、生地、玉竹、元参）和退蒸除烦作用（如竹叶、青蒿、鳖甲、龟板、丹皮、地骨皮、甘中黄》。所以对于喉科疾病更为适宜。临床上常用代表方，有五味消毒饮、竹叶石膏汤和白虎汤等。
+（1）清热解毒，在喉科里最多用的法则。大凡取用温药、热药而导致的副作用甚致产生流弊，显而易见，而且反应也快。误用清凉药引起的副作用甚至产生流弊，难以暴露，反应也更不明显。所以历来医务界就有“与其误取温热，曷若错用清凉”的习惯。其实误用热药的流弊，正因为明显而易于补救。而误用凉药的流弊，正因为隐晦而难于发现、纠正，致许多医家、病家身受其害而不自知。同样清热解毒药的流弊，甘寒解毒比苦寒解毒要小得多，万一误用，也易于纠正。所以审慎的、经验丰富的医家，都善用甘寒解毒药。所谓甘寒解毒剂（药），主要是不采取大苦大寒的药而采用甘淡和平的药来清热解毒。论作用，当然不及苦寒的立竿见影，凌厉有力。但对夹有表邪的、津亏的、体弱的人是不会产生不良后果。此外，在甘寒剂中还有两个独具的作用，就是有滋阴生津的作用（如石膏、芦根、花粉、知母、生地、玉竹、元参）和退蒸除烦作用（如竹叶、青蒿、鳖甲、龟板、丹皮、地骨皮、甘中黄》。所以对于喉科疾病更为适宜。临床上常用代表方，有五味消毒饮、竹叶石膏汤和白虎汤等。
 
 （2）苦寒解毒：这是采取大苦大寒药组成的苦寒重剂。凭它的寒凉直折之势，把炎炎不可向迩之火镇压或消灭，其效果比甘寒的明显、迅速。故如急性扁桃体炎、急性咽炎、扁桃体周围脓肿、急性会厌炎以及急性严重旳口腔炎症，大有非此不可之概。常用代表方有黄连解毒汤、银花解毒汤之类。喉科历来常用的为加减三黄凉膈散。不过苦能生燥，津亏者慎用。气血遇寒则凝，气血不足者慎用。寒能遏火，表邪未清者慎用。
 
@@ -90,7 +90,7 @@
 
 （1）止血：适用于急性、慢性的齿龈衄血及各种不常见的出血症。凡由于血热者，取清降法，常用方有茜根散。由于脾不统血者，取滋养收敛法，常用方有养血归脾汤。恶性肿瘤的大出血，则用独参汤。普通一般性的，可用十灰散（丸），严重的犀角地黄汤。凡兼高血压者，以潜肝阳为第一要务，宜羚羊角。
 
-（2）化瘀：所谓化瘀，是活血的目的。所谓活血，是化瘀的手段。喉科多见于声带慢性充血、声带血性息肉、窒带或披裂肌长期水肿等。因为咽喉位处头面，所以《医林改错》的通窍活血汤与会厌逐瘀汤最为合适。
+（2）化瘀：所谓化瘀，是活血的目的。所谓活血，是化瘀的手段。喉科多见于声带慢性充血、声带血性息肉、室带或披裂肌长期水肿等。因为咽喉位处头面，所以《医林改错》的通窍活血汤与会厌逐瘀汤最为合适。
 
 （3）破结：结，《淮南子•汜论》：“凝滞而不化”，所以它是瘀滞达到了极点。一般活血化瘀的方药，对它已不能发生效用，所以不能不采用峻剂猛药来攻而破之。最典型的顽固瘀结，乃是喉科病中室带或披裂长期水肿，至今在国际上还很少办法。应用加减三甲散，有时还同服小金丹，有临床疗效。
 
